--- a/John Hexa/丢手机.md
+++ b/John Hexa/丢手机.md
@@ -3,8 +3,9 @@
 
 > Author: #JohnHexa 
 Last update: *15/11/2021* 
-Links: 
+Links: [[SOP - 蒸蛋羹]] [[SOP - 西安地铁]] 
 Tags: #人生管理SOP 
+沙海拾金： [[SOP - 企业制度.jpeg]] [[有条理SOP.jpeg]]
 
 立刻拨打运营商客服电话先挂失号码，这样sim卡就不能联网使用了。
 
