--- a/John Hexa/中国式反同化.md
+++ b/John Hexa/中国式反同化.md
@@ -3,14 +3,9 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links:
+Links: [[所谓国籍]] [[王天下]] [[文化]] [[文化输出]] [[文化碰撞]]
 Tags:  #社会科学Social-Science
 
-
-
-谢谢各位提醒我有一样的回答，不过我已经说过这是许可的。
-
-即使没有注明转载，都一并许可。
 
 中国人、犹太人都是出了名的难同化，甚至有二代同化了、一句中文都不会说了，到三代四代又回来寻根返乡的。
 
