--- a/摘抄本/生词本.md
+++ b/摘抄本/生词本.md
@@ -1,6 +1,18 @@
 # 生词本
 
-**渊薮** - /yuānsǒu/
+---
+
+【翎顶】
+清代官帽上的翎子和顶子的并称。亦为官爵的代称。
+
+出处：
+清 龚自珍 《上镇守吐鲁番领队大臣宝公书》：“今日守回之大臣，惟当敬谨率属，以导回王回民，刻刻念念，知忠知孝，爱惜翎顶。”
+
+坐观老人《清代野记》：:“每有旗主，贫无聊赖，执贱役以糊口，或为御者，或为丧车杠夫，或为掮肩者。若途遇其奴，高车驷马，翎顶辉煌者，必喝其名，使下车代其役，奴则再三请安，解腰缠以贿之，求免焉。故旗奴之富贵者，甚畏见其贫主也。”
+
+---
+
+【渊薮】 - /yuānsǒu/
 聚集；深广；深渊；根源；鱼和兽类聚居的处所。比喻某种人或事、物聚集的地方。
 
 出处：
@@ -10,12 +22,12 @@
 
 ---
 
-**旷量** 
+【旷量】 
 指的是不影响机器精密的情况下，许可部件之间有一定的活动余地，以消除加工误差给部件连接的影响。
 
 ---
 
-**破片**
+【破片】
 小碎块;不完全的部分
 
 关联词条：破片杀伤
@@ -23,7 +35,7 @@
 
 ---
 
-**乡愿**
+【乡愿】
 外貌忠厚老实，讨人喜欢，实际上却不能明辨是非的人。
 
 出处：
@@ -39,7 +51,7 @@
 
 ---
 
-**绥靖** - /suí jìng/
+【绥靖】 - /suí jìng/
 绥，本义是借以登车的绳索，引申为安定、安抚。靖，安定之意。即以[安抚]（绥）的手段使局势安定（靖），又称为姑息主义。“慰抚”之意。引申为为求苟安而去做一些违反理性与原则的行为，甚至这种行为里还有一种非理性的纵容。
 
 关联词条：绥靖政策 （policy of appeasement）
@@ -47,23 +59,69 @@
 
 ---
 
-浇奠
+【浇奠】
+①洒酒祭奠。
 
-波阱
+②基督教祭祀用语，**浇奠**这个希腊字动词是**spendesthai**，意即向诸神倒出生命来当作浇奠。罗马人每餐皆以一种献祭作结束；这是指拿起一杯酒将它倒出来（spendesthai）献给诸神。《圣经----提摩太后书第四章》保罗说：我的生命已经抵达必须浇奠的时候。（生命的日子已尽，这是我离开的时候了；我必须把我的生命倒出来，献给神作祭物。）
 
-敕封
+出处：
+宋·朱彧《萍洲可谈》：“宰相薨，驾幸**浇奠**。”
 
-信靠
+元·商挺《潘妃曲》：“闷酒将来刚刚嚥，欲饮先**浇奠**，频祝愿。”
 
-芜杂不纯
+《二刻拍案惊奇》卷六：“办了些牲醴酒馔，到墓间浇奠一番，哭了一场。”
 
-虚应故事
+《儒林外史》第二八回：“﹝鲍廷玺﹞就同阿三到他哥哥厝基的所在，摆下牲醴，**浇奠**了酒，焚起纸钱。”
 
-噬脐莫及
+《水浒传--八十七回》：这武松一面就灵前一手揪着妇人，一手**浇奠**了酒，把纸钱点着，说道：“哥哥你阴魂不远，今日武二与你报仇雪恨。”
 
-陈陈相因
+---
 
-伊于胡底
+【敕封】 - /chì fēnɡ/
+皇帝頒詔書封賜臣僚爵號，官位，財物，奴婢，妃妾，其它頭銜，是帝王制度的專屬詞彙。
 
-翎顶辉煌
+明、清對文武官員及其先代妻室贈予爵位名號時，皇帝詔命有誥命與敕命之分，五品以上授誥命，稱誥封；六品以下授敕命，稱敕封。誥命與敕命形如畫卷，軸端一品用玉，二品用犀，三品與四品用裹金，五品以下用角，參見“封贈”。明《東江疏揭塘報節抄》：“除一而移會登萊巡撫袁可立外，既經委臣查勘前來，合行覆請，伏乞皇上亟賜冊號封典敕於該部，速遣使臣航海前來，不致風高浪阻，誤敕封大典，並誤疆場大事也。”
+
+---
+
+【信靠】
+
+---
+
+【芜杂不纯】
+
+---
+
+【虚应故事】
+照例应付，敷衍了事。指用敷衍的态度对待工作。出自《宋史·刘黻传》。
+
+《宋史·刘黻传》：“比年朋邪扇焰，缄默成风，奏事者不过袭陈言应故事而已。”
+
+---
+
+【噬脐莫及】
+像咬自己**肚脐**似的，够不着。 比喻后悔也来不及。 出自《左传·庄公六年》。
+
+《左传·庄公六年》：“若不早图，后君噬齐（脐），其及图之乎？”
+
+---
+
+【陈陈相因】
+指皇仓之粮逐年增加，陈粮上压陈粮。 后多比喻沿袭老一套，无创造革新。出自于西汉·司马迁《史记·平准书》。
+
+西汉·司马迁《史记·平准书》：“太仓之粟，陈陈相因，充溢露积于外，至腐败不可食。”
+
+---
+
+【伊于胡底】
+一种感叹，对一些不好的现象表示感慨，意思是究竟要到什么时候为止，意同不堪设想，出自《诗经·小雅·小旻》。
+
+《诗经·小雅·小旻》:“我视谋犹,伊于胡底?”
+
+---
+
+【安坐乐听】
+
+---
+
 
