--- a/John Hexa/个人问题.md
+++ b/John Hexa/个人问题.md
@@ -3,9 +3,8 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links:
-Tags:  #社会科学Social-Science
-
+Links: [[征求建议]] [[珍惜]] 
+Tags:  #社会科学Social-Science #人生管理SOP 
 
 
 任何问题都是成本收益问题。
