--- a/John Hexa/致读者 - 之一.md
+++ b/John Hexa/致读者 - 之一.md
@@ -2,7 +2,7 @@
  
  > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[致读者 - 之二]] [[致读者 - 之三]] [[致读者 - 之四]]
+Links: [[致读者 - 之二]] [[致读者 - 之三]] [[致读者 - 之四]] [[留言]]
 Tags:  #人生管理SOP #家族Clan #社会科学Social-Science #亲密关系Intimate-Relationship  #企业管理B-Management  
 沙海拾金： [[致读者1.jpg]] [[致读者2.JPG]] [[沙海拾金/公平因果]] [[施粥人]] [[人类共性.JPEG]] [[人类共性1.JPEG]] [[人类共性2]] [[人类共性3.jpg]] [[天使与恶魔.JPEG]]
 
