--- a/沙海拾金/关于中国社会的独特性.md
+++ b/沙海拾金/关于中国社会的独特性.md
@@ -17,7 +17,7 @@
   
 而百年未有之大变局，在这个维度下的解读，正是中国终于开始看到了这个不可置疑的生存权的明确曙光，并且在这个心态转变之下开始了生存方式的转变。眼下正在一个转变伊始、青黄不接的阶段，还极大的保有原先的准战争结构和文化惯性。原来的体制，是不可能放任信息横流的——没有哪只军队能接受这样的安排。而且这是理所当然的，因为生存危机当前，没人会加以质疑的共识。这就导致之前的体制在公众舆论方面有难以根除的命令式的治理文化。这个与国家级的战略协调能力是内在绑定的特性。  
   
-中国之所以发展如此之迅猛有效，依靠的根基不是在战术层面的优秀杰出，而是在战略层面避免了内部摩擦产生的系统性巨额消耗。但这个优势不是白白享有，舆论场域的天然脆弱性，是内生的阿克琉斯之锺。美国在战略发展上感到吃力，向这个显而易见的薄弱点全力攻击是理所当然的。  
+中国之所以发展如此之迅猛有效，依靠的根基不是在战术层面的优秀杰出，而是在战略层面避免了内部摩擦产生的系统性巨额消耗。但这个优势不是白白享有，舆论场域的天然脆弱性，是内生的阿克琉斯之踵。美国在战略发展上感到吃力，向这个显而易见的薄弱点全力攻击是理所当然的。  
   
 这是中国面对的最严峻的问题。但好的一面是，中国自身也在坚定稳健的向与拥有不可置疑生存权的国家所天然归属的开放、自由的方向转变。这转变越深，国内舆论场会自然产生各种观点充分沟通碰撞的渠道和沟通的文化与经验，从而实现民间意见的自我平衡。这其中，理性、冷静的声音，是最大的压舱石和稳定器。  
   
