--- a/Anonymity/02 - 企管答集/稻草.md
+++ b/Anonymity/02 - 企管答集/稻草.md
@@ -2,9 +2,9 @@
 [和老板打游戏，一定要放水让老板赢吗？](https://www.zhihu.com/question/493547911/answer/2188863159)
 
 > Author: #Anonymity 
-Last update: *28/10/2021* 
+Last update: *13/02/2022* 
 Links: [[软弱者领导]] [[学习的快乐]] [[尊重]] [[尊重的实践]] [[跟对人]] [[人品]] [[内卷]] [[黄色玩笑]] [[黄色玩笑1]] [[捧杀]] [[电车难题]] [[木秀于林]] [[面子]]
-Tags: # #方法实践SOP 
+Tags: #方法实践SOP 
   
 
 堂堂正正打ta个落花流水，
@@ -39,7 +39,7 @@ Tags: # #方法实践SOP
 
 买稻草去。
 
-![](https://pic2.zhimg.com/50/v2-f25e2c5042e518624222f3693796f1dc_720w.jpg?source=1940ef5c)
+![](https://pic3.zhimg.com/50/v2-f25e2c5042e518624222f3693796f1dc_720w.jpg?source=1940ef5c)
 
   
 
@@ -61,11 +61,11 @@ Tags: # #方法实践SOP
 
 什么叫病态的胜利观？
 
-打星际争霸用水晶塔修图案。
+打[星际争霸](https://www.zhihu.com/search?q=%E6%98%9F%E9%99%85%E4%BA%89%E9%9C%B8&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2188863159%7D)用水晶塔修图案。
 
 打实况足球次次都晃倒守门员，或者非要选中国队打人家巴西。
 
-打皇牌空战不用导弹。
+打[皇牌空战](https://www.zhihu.com/search?q=%E7%9A%87%E7%89%8C%E7%A9%BA%E6%88%98&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2188863159%7D)不用导弹。
 
 打CS不买枪。
 
@@ -75,25 +75,19 @@ Tags: # #方法实践SOP
 
 看出什么区别了吗？
 
-故意用绑住一只手、自我设限之类手段炫耀自己的强大，嘲弄对方的弱小。
+故意用绑住一只手、自我设限之类手段**炫耀自己的强大，嘲弄对方的弱小，**这就是病态的胜利观。
 
-这就是病态的胜利观。
-
-日本人酷爱搞这种小强拼尽全力，大boss伸出一根食指就顶住，或者小强牺牲生命，大boss刚出点鼻血就称赞“你居然能让我流血”之类的狗娘养的下流快感。
+日本人酷爱搞这种“小强拼尽全力，大boss伸出一根食指就顶住“，或者“小强牺牲生命，大boss刚出点鼻血就称赞“你居然能让我流血””之类的[狗娘](https://www.zhihu.com/search?q=%E7%8B%97%E5%A8%98&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2188863159%7D)养的**下流**快感。
 
 不错，ta们本意是想造“神”，想塑造“强大”，但我把这话放在这里——只要这个民族幻想的“强大的神”普遍还是这副下流的样子，这个民族就没有什么希望和前途可言。
 
-不错，**下流**。
-
-Yes, I said it.
+Yes, I said it.，**下流**。
 
 等而下之流。
 
 因为这不是胜利，而是**侮辱**。
 
-一个人只有能对人造成侮辱才会认为自己得到了胜利，这个人的人格就没有别的词可以形容。
-
-必须称之为**下流。**
+一个人只有能对人造成侮辱才会认为自己得到了胜利，这个人的人格就没有别的词可以形容，必须称之为**下流。**
 
 **等而下之之流。**
 
@@ -101,21 +95,23 @@ Yes, I said it.
 
 **士可杀而不可辱。**
 
-**无论对待什么样的对手，一旦展开竞争，就要真心诚意，全力以赴。你可击败对方，以一切该有的差距去击败对方，但是你没有权利以任何形式去侮辱对方。**
+**无论对待什么样的对手，一旦展开竞争，就要正心诚意，全力以赴。你可击败对方，以一切该有的差距去击败对方，但是你没有权利以任何形式去侮辱对方。**
 
 你如果羡慕那些人可以享受侮辱人的快感，从你羡慕的那一刻开始，用不着等你拥有侮辱人的机会和能力，你就已经和那个侮辱人的下流人同样下流。
 
 为什么有的人不敢“赢老板”？
 
-因为ta已经把“赢“定义成了“完成侮辱”。ta不是在顾虑赢了老板会被报复，ta是在下意识的顾虑侮辱了老板会被报复。
+**因为ta自己内心深处已经把“赢“定义成了“完成侮辱”。**ta不是在顾虑“赢了老板”会被报复，ta是在下意识的顾虑**侮辱了老板**会被报复。
 
-因为ta自己的胜利观如此病态，ta不敢不想象老板的胜利观跟ta自己相通——这种病态的胜利观是成对的，赢是完成侮辱，输是接受侮辱。
+因为ta自己的胜利观如此病态，ta总觉得世界上所有人——当然也包括老板——的胜利观跟ta自己肯定一样。
+
+这种病态的胜利观是成对的，“赢”就是“完成侮辱”，“输”就是“接受侮辱”。
 
 “老板跟我一样，输了就会全自动认为受了侮辱，我要不要赢/侮辱ta一下呢？”
 
 那答案当然是不啊，你想找死啊。
 
-但是，谁跟你说只有“完成侮辱”才是胜利？
+但是，**谁跟你说只有“完成侮辱”才叫胜利**？
 
   
 
@@ -127,7 +123,7 @@ Yes, I said it.
 
 这是一个自我实现的预言——是因为你这样把胜利理解为成功的侮辱，你就会这样做，这样做了就会刺激出输家的报复，输家的报复会进一步巩固你这样的想法。
 
-你这样想，就会得到这样想所需要的一切证据，被锁死在一个这样的念头所圈定的异次元世界里。
+你这样想，就会得到这样想所需要的一切证据，被锁死在一个这样的念头所圈定的[异次元](https://www.zhihu.com/search?q=%E5%BC%82%E6%AC%A1%E5%85%83&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2188863159%7D)世界里。
 
 同样是大比分打败老板，为什么老板要把你碎尸万段，却对小王拍案叫绝、赞不绝口？
 
