--- a/Anonymity/08 - 文艺答集/疗愈艺术.md
+++ b/Anonymity/08 - 文艺答集/疗愈艺术.md
@@ -2,7 +2,7 @@
 *如何看待“艺术疗愈”这一概念？*
 
 > Author: #Anonymity
-Last update: *31/01/2022* 
+Last update: *13/02/2022* 
 Links: [[欣赏1]] [[三合一]] [[雅俗共赏]] [[艺术之美]] [[艺术本质]]
 Tags:    #方法实践SOP
 
@@ -207,8 +207,132 @@ note 3
 
 在你的身体里，哪里藏着这根直线？
 
-（未完，待续）
 
+note 4
+
+不要构建一个“如果我没有杂念的执行就可以行得通”的办法，因为这样你是在依赖“没有杂念”。
+
+你的方法没有健壮到“就算有杂念也没啥大不了的”。
+
+只有健壮到这个地步，你才会免疫于“我有杂念”的执着，从而真的没有什么杂念。否则“一定要依赖无杂念才能行得通的方法“本身就要制造无数的杂念，自我崩溃。
+
+一个需要没有杂念才能行得通的方法，本质上其实是个伪方法，对它的掌握其实没有太大的实质意义。
+
+“对一个不可靠的方法加以极大的训练量，尝试通过所谓的‘熟练’催生出一种玄学般的能力”，这是中国的技艺观中的一个极大的歧途。
+
+由此获得的所谓“技艺”，往往有一个典型的问题，就是“狗肉上不得正席”。
+
+它极大的依赖于悠闲自得的无压力的心理状态。问题是一见真章就必然会有恐慌、一有恐慌就一定产生自我怀疑，一产生自我怀疑就会杂念丛生。
+
+而**没有杂念是它能行得通的前提**。
+
+这样的“技能”，只是一种致命的逼真幻觉。
+
+它的危险之处在于——在没有压力的时候你似乎真的可以做到，你甚至可以拿出一些优质练习来向你自己证明你真的可以做到甚至做到过。
+
+但是只要拿来用、要面对风险、面对后果、面对期待、面对压力，就**一败涂地**。
+
+继续寻找，这不是正牌货，**这种程度的方法，还不够资格成为功夫的逻辑基础**。
+
+够资格成为功夫的基础的方法，必须不依赖“没有杂念”的好状态。
+
+**只有这种级别的方法，才值得投入重大的训练成本去形成肌肉记忆。**
+
+继续寻找。
+
+---
+
+note 5
+
+有一种问题是这样的——首先，提出了一种理论，接着测试了一下，感觉“效果还可以”，唯一的问题，是画不了几笔就会觉得肌肉很酸。
+
+在这个[节骨眼](https://www.zhihu.com/search?q=%E8%8A%82%E9%AA%A8%E7%9C%BC&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A1904038706%7D)上，很多人都会觉得“方法已经可以了，接下来就是需要上大练习量，适应这个酸痛就可以了”。
+
+**这是一个有巨大的隐患的节点。**
+
+到了这个点上，一定要站稳了，思考几个问题。
+
+1）这是个“可以靠把肌肉练强后克服”的问题吗？
+
+要思考这个问题，你可以观察一下与之相关的假设是否成立——“如果是，那么画画的人那几块肌肉应该很壮很鼓，而且应该两边身体不对称。”
+
+难道不是吗？那些高手们如果的确是这样解决了问题，那么你那块画了几笔就开始酸胀的肌肉，应该远远的没他们发达，不是吗？
+
+观察一下名画家们，有这个现象吗？
+
+2）绘画是很高强度的事，如果画直线的方案会导致肌肉很快酸痛，这意味着你用同一方法反复绘画直线，直线的质量会随你的肌肉酸痛程度起伏变化——比如肌肉越酸画的越弯。而你无法量化、也无法控制肌肉的酸痛程度，换句话来说，这已经内在的意味着这个方法不可靠。
+
+这个时候强行猛练，更大的可能是会练出[肌肉劳损](https://www.zhihu.com/search?q=%E8%82%8C%E8%82%89%E5%8A%B3%E6%8D%9F&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A1904038706%7D)，并且在肌肉劳损到无法支撑后，你的直线质量仍然无法过关。
+
+凡是需要形成肌肉记忆的——也就是要形呈真正的技能的——训练，第一个要害就是要保证形成的是**正确的**肌肉记忆而不是错误的肌肉记忆。**如果是错误的肌肉记忆，一旦形成是很难摆脱的。**
+
+这整个修炼有一个很大的point、就是要逼迫你们一步步的体会到“要到什么时候才可以说‘这回ok了’”。
+
+ok了，你才能下重注，上大练习量，去形成肌肉记忆。
+
+**现在还不ok**，继续思考和测试。
+
+不要轻易的上大训练量去看“大训练量后的效果”。
+
+---
+
+note 6
+
+斜30度怎么保证？
+
+很多人用量角器。
+
+如果没有量角器怎么办？
+
+想过没有？
+
+如何在没有量角器的前提下找到30度角？
+
+![](https://pic3.zhimg.com/50/v2-f41a181fd2f85ac40cc3fc85f17ec84b_720w.jpg?source=1940ef5c)
+
+将一张A4纸的一边折过来，使其平分折叠角，其折痕是不是就是30度角？
+
+测量出折痕与下边的交点后，该交点与长边的中分点相差多远？能不能找一个依据记下来？比如，距离中分点有你几个手指宽？
+
+以后你能不能凭目测直接找到这个点？
+
+所有的A4纸都一样，这是不是就足够你定位了？
+
+为什么要选择整张纸的角点来测量？
+
+因为在这个尺度下，就算你偏了几毫米，你的角度偏差也很小，几乎可以忽略不计。
+
+  
+
+如果你用的是ipad里的procreate，那么界面的右上角拉一条30度线下来与界面上的哪个元素的哪个角相交？
+
+![](https://pic3.zhimg.com/50/v2-a241de6688da8c8733501e5b7e8b0a97_720w.jpg?source=1940ef5c)
+
+  
+
+![](https://pic3.zhimg.com/50/v2-ba57adbfc4453657ba389285c18ae3bb_720w.jpg?source=1940ef5c)
+
+连接这两点，就是30度。
+
+**君子性非异也，善假于物耳。**
+
+**Translation——有物不假大傻瓜。**
+
+  
+
+**谁说你是赤手空拳？**
+
+**飞花摘叶，皆可伤敌。**
+
+（未完，待续）
+ 
+ps：
+一个可以在任何正规长方形纸上得到三十度角的方法：  
+  
+长边对折一次，展开得到折痕1，短边一角对折到折痕上，得到折痕2，折痕2与短边形成的夹角即为30°。  
+原理如下图
+
+![](https://pic4.zhimg.com/v2-e8534a8cd06d6e3b5ec1bd032678d7ab_qhd.jpg)
   
   
 #未完待续TBC 
