--- a/Nell Nell/00 - “是什么”系列/初心.md
+++ b/Nell Nell/00 - “是什么”系列/初心.md
@@ -4,7 +4,8 @@
 > Author: #NellNell 
 Last update: *20/07/2021* 
 Links: [[世故青年]] [[爱 - Caritas]] [[爱得痛苦]] [[学习的快乐]] [[过渡性价值观]] [[今生之意]] [[如何活]] [[学习的快乐]]
-Tags:    
+Tags: 
+沙海拾金： [[忘我.jpeg]]
   
 
 何为初心？最直接的回答，就是**忘我之心**。
