--- a/Anonymity/01 - 家族答集/崇拜与自恋.md
+++ b/Anonymity/01 - 家族答集/崇拜与自恋.md
@@ -5,7 +5,7 @@
 Last update: *01/10/2021* 
 Links: [[偶像崇拜]] [[偶像这种毒]] [[自律]] [[自欺]] [[自视]] [[神的荣耀]] [[咨询师]] [[慈善]] [[爱 - Caritas]]
 Tags: #方法实践SOP  
-沙海拾金： [[人类共性.JPEG]] [[人类共性3.jpg]]
+沙海拾金： [[人类共性2.jpeg]] [[人类共性3.jpg]]
 
 有几类人要把防崇拜当成日常事务来做：
 
