--- a/摘抄本/摘抄 - 励志金句.md
+++ b/摘抄本/摘抄 - 励志金句.md
@@ -1,6 +1,16 @@
 # 摘抄 励志金句
 
 
+人不应该拒绝一种可以兴起爱的因缘。
+
+这个世界上的爱永远都太少了，如果有任何一种理由，可以激起你去爱任何一群人，你都不应该拒绝它。
+
+无论它有多“粗糙”，多经不起“质疑”。
+
+那根本就不重要。
+
+---
+
 想做到做不到那叫退而求其次，做得到不去做这叫自误。
 
 ---
@@ -81,7 +91,7 @@
 
 ---
 
-**任何不容你选择的意外，背后最终包含的是对你的好意。**
+任何不容你选择的意外，背后最终包含的是对你的好意。
 
 ---
 
