--- a/Anonymity/03 - 第一性/膝盖的目的.md
+++ b/Anonymity/03 - 第一性/膝盖的目的.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *11/09/2021* 
-Links: [[反恐]] [[恐怖主义]] [[孰强孰弱]] [[以弱悯强]] [[敌人]] [[宣而不战]] [[女权挑战]] [[实质进展]] [[BD象限不为空]] [[质疑女权]] [[致全体女性]] [[女性盟友]] [[女性之难]] [[女性公平]] [[女权 - 受害者论]] [[女权 - 错误方向]] [[立场分歧]] [[爱 - Caritas]] [[理性的爱]] [[长时间保持理性]] [[理解的原理]] [[爱与理解]] [[反弹琵琶]] [[仇日]] [[所谓国籍]] [[所谓民族]]
+Links: [[反恐]] [[恐怖主义]] [[孰强孰弱]] [[以弱悯强]] [[敌人]] [[宣而不战]] [[女权挑战]] [[实质进展]] [[BD象限不为空]] [[质疑女权]] [[致全体女性]] [[女性盟友]] [[女性之难]] [[女性公平]] [[女权 - 错误方向]] [[立场分歧]] [[爱 - Caritas]] [[理性的爱]] [[长时间保持理性]] [[理解的原理]] [[爱与理解]] [[反弹琵琶]] [[仇日]] [[所谓国籍]] [[所谓民族]]
 Tags:    
 沙海拾金： [[膝盖的目的.jpeg]] [[膝盖的目的1.jpeg]]
   
