--- a/Anonymity/08 - 文艺答集/疗愈艺术.md
+++ b/Anonymity/08 - 文艺答集/疗愈艺术.md
@@ -334,7 +334,61 @@ ps：
 
 ![](https://pic4.zhimg.com/v2-e8534a8cd06d6e3b5ec1bd032678d7ab_qhd.jpg)
   
+note 7
+
+难攻不落[小田原](https://www.zhihu.com/search?q=%E5%B0%8F%E7%94%B0%E5%8E%9F&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A1904038706%7D)，那是因为攻的人总是一鼓作气，再而衰，三而竭。
+
+一鼓作气，再也不衰，三也不竭，
+
+四、五、六、七、八、九……
+
+只要此城可落，就是每天只有寸进，也迟早有胜利的一天。
+
+念念不忘，必有回响。
+
+“只在人声鼎沸的时候才士气旺盛”的努力，只不过是一种“集体娱乐”，这样的“努力”严重的依赖于“学习环境”。
+
+于是，进不了重点班就完了，考不上名校就完了，进不了大手企业就完了。
+
+曲终人散，人走茶凉，仍然兴致勃勃的努力，这是你建立不依赖于环境的能力必过的一关。
+
+你什么时候能过了这关？
+
+---
+
+note 8
+
+谁说要在纸上画出30度角的斜线，人就要做出30度角的动作？
+
+找到你正坐时最轻松、最直的角度，如果它不是30度，那么为什么不**转腰 / 转纸？**
+
+![](https://pic3.zhimg.com/50/v2-c7b79c7f8afce624eb4e43b8763f5239_720w.jpg?source=1940ef5c)
+
   
+
+如果穆罕默德无法向山走去，
+
+那就把山搬过来。
+
+  
+
+  
+
+  
+
+  
+
+  
+
+  
+
+  
+
+  
+（未完，待续）
+
+ 
+
 #未完待续TBC 
   
   
