--- a/Anonymity/04 - 社科答集/大国崛起.md
+++ b/Anonymity/04 - 社科答集/大国崛起.md
@@ -11,7 +11,9 @@ Tags:
 
 没有一点勉强，没有一点悬念。
 
-这题目下九成答主都会对这个结论有卓有成效的贡献。——**很多人干脆就是以“能不能欺压其他国家”作为“中国强大了”的鉴定指标，怎么可能“将来强大了不威胁其他国家”？**逻辑上就是必然的。
+这题目下九成答主都会对这个结论有卓有成效的贡献。——**很多人干脆就是以“能不能欺压其他国家”作为“中国强大了”的鉴定指标，怎么可能“将来强大了不威胁其他国家”？** 
+
+逻辑上就是必然的。
 
 我们扪心自问，这样去鉴定“中国强大”的人真的是“极少数”吗？其他国家能不害怕吗？
 
