--- a/Anonymity/04 - 社科答集/帝国陷阱.md
+++ b/Anonymity/04 - 社科答集/帝国陷阱.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
-Links: [[“大战略”]] [[帝国病]] [[中芯与台积电]] [[制造业灵魂]] [[航母]] [[台湾问题]] [[台湾 - 言之不预]] [[台湾 - 消除妄想]]
+Links: [[“大战略”]] [[帝国病]] [[中芯与台积电]] [[制造业灵魂]] [[航母]] [[台湾问题]] [[台湾 - 言之不预]] [[武力和统]]
 Tags:    
 
 
