--- a/Anonymity/04 - 社科答集/武力和统.md
+++ b/Anonymity/04 - 社科答集/武力和统.md
@@ -1,8 +1,8 @@
-# 台湾 - 消除妄想
+# 武力和统
 *如何看待 9 月 19 日，解放军 19 架战机进入台西南及西北空域?*
 
 > Author: #Anonymity
-Last update: *23/07/2021* 
+Last update: *27/02/2022* 
 Links: [[台湾 - 言之不预]]
 Tags:   
 
