--- a/Anonymity/04 - 社科答集/遏制台独.md
+++ b/Anonymity/04 - 社科答集/遏制台独.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
-Links: [[台湾 - 言之不预]] [[台湾问题]] [[台湾 - 消除妄想]] [[台湾问题]]
+Links: [[台湾 - 言之不预]] [[台湾问题]] [[武力和统]] [[台湾问题]]
 Tags:  
 
  
