--- a/Anonymity/04 - 社科答集/台湾 - 以武促统.md
+++ b/Anonymity/04 - 社科答集/台湾 - 以武促统.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
-Links: [[台湾 - 真正目的]] [[台湾问题]] [[台湾 - 消除妄想]] [[台湾 - 言之不预]]
+Links: [[台湾 - 真正目的]] [[台湾问题]] [[武力和统]] [[台湾 - 言之不预]]
 Tags:   #   
 
 
