--- a/Anonymity/05 - 科学答集/应用科学/直升朱峰.md
+++ b/Anonymity/05 - 科学答集/应用科学/直升朱峰.md
@@ -6,7 +6,7 @@ Last update: *23/07/2021*
 Links: [[固定翼飞机 & 直升机]]
 Tags:  
 
- 
+
 要说可能性，当然不算不可能，但是这个危险相当大。
 
 海拔8848米处的气压很低，这个已经说过了。直升机需要很高的转速才能维持正常机动的动力。这个超高的转速意味着机身的自反扭矩也会跟着变强，尾桨在空气稀薄的条件下的对抗任务也就更艰巨。这会大大的提高事故的可能性。需要这么大的输出功率，你的发动机进气含氧量却不足，雪上加霜。
@@ -17,14 +17,15 @@ Tags:
 
 第三，对积雪地带，直升机最好进行绳索垂降。因为如果想要直升机直接着陆，碰到下面是刚下过新雪，螺旋桨巨大的反冲气流会导致积雪飞舞，严重影响视线。而且如果雪花在空气中含量过大，会引起复杂的空气动力学问题，这就绝对超过飞行员能应对的经验范围了。
 
-![](https://pic2.zhimg.com/50/v2-253434d50ac7aafc1ea4fc8793f11359_hd.jpg?source=1940ef5c)  
-
-
-![](https://pic2.zhimg.com/50/v2-3b926fd16633438efc007d4e0136c945_hd.jpg?source=1940ef5c)  
-
+![](https://pic3.zhimg.com/50/v2-86b7232ba7d45deb9a2280ae6d2dea13_720w.jpg?source=1940ef5c)
 
   
 
+![](https://pic1.zhimg.com/50/v2-aca986ea4f99fa20eb2700fc2ab1beca_720w.jpg?source=1940ef5c)
+
+  
+
+  
 
 而偏偏绳索垂降在气流湍急而陌生的高海拔空域是相当危险的。
 
@@ -40,7 +41,6 @@ Tags:
 
   
 
-
 第四，常年积雪的陡峭区域是极端脆弱敏感的。直升机这种噪音大户前往这些区域是严重不道德的。你的声浪和反冲气流有相当大的概率引发积雪滑坡。专业登山者求救连大声喊叫都不太敢，你开一个空中拖拉机去“咣咣咣咣”，把积雪震垮了，下面要是正有别人在登山，运气不好一下死十几二十个。
 
 你拿什么赔？
@@ -55,9 +55,11 @@ Tags:
 
 PS：
 
- 为免某些机灵鬼抬杠，我先声明一声——你们打算说的那个直升机在珠峰顶“着陆”的视频我当然看过。
+为免某些机灵鬼抬杠，我先声明一声——你们打算说的那个直升机在珠峰顶“着陆”的视频我当然看过。
 
-![](https://pic4.zhimg.com/50/v2-7649aead7322906ac2823e00ba6a5589_hd.jpg?source=1940ef5c)所谓的“着陆”，就是上图这里这点起落架接触。
+![](https://pic2.zhimg.com/50/v2-9767e206ce23b3dd8068fe2ab0698ec7_720w.jpg?source=1940ef5c)
+
+所谓的“着陆”，就是上图这里这点起落架接触。
 
 旋翼可没敢停机。如果它敢停机，尾桨是铁定要触地的，飞机也是一定会深陷到积雪里的。考虑到坡面的陡峭程度，这架飞机一定是会翻滚到山下去的。
 
@@ -66,6 +68,3 @@ PS：
 放一个人落地站五分钟再把他接走，我才认可你算是完成了测试项目。——这显然并不能算是对“登顶”过于苛刻的定义。
 
 注意，我不是认为这是“绝对不可能的”，但是我相信**死亡率不会低于19%**。
-
-
-
