--- a/Anonymity/08 - 文艺答集/疗愈艺术.md
+++ b/Anonymity/08 - 文艺答集/疗愈艺术.md
@@ -370,9 +370,71 @@ note 8
 
 那就把山搬过来。
 
+
+note 9
+
+有没有想过“成功”的标准是什么？
+
+有没有想过尝试修改规则为“允许无限放慢速度、无限的修改获得平直的线”，然后试试看在这个规则下如何画出完美直线？
+
+一笔下去，弯弯曲曲，但能不能凭肉眼看出起点和终点之间这条弯曲的线与完美直线有多少个交点？哪一段是向上弯，哪一段是向下弯？能不能逐段的擦除、修正，直到得到一条完全合乎要求的线？
+
+如果可以，那么意味着你手里有一个**最笨的**、但是却是**百分百可以成功复用**的**笨办法**。
+
+看清楚这个至关重要的条件——百分百可以成功复用的方法。
+
+得到任何这样的方法，你都可以认为已经获得了某种意义上的成功。
+
+这个方法已经使得你有了一个最基础的成绩，将“做不到”消灭掉了，使得问题从“做不做得到“转向了“做得够不够好”。
+
+它也使得你有了一个努力的基本起点——你很可能可以通过观察这个笨拙的成功，去发现它最可以改善的细节，提高它的表现。
+
+比如，如何增加首次绘制后理想交点的数量（严格说，是密度，即每厘米内与理想直线交点的数量）？
+
+你所追求的理想，换一个表述方式，不就是“首次出手就将‘理想交点密度’提升到肉眼分辨率极限”吗？
+
+如果你可以以一个龟速大幅度的提高这个密度值，那么在这个龟速下，你是怎么做到的？你此时的动作是什么？
+
+这个动作为什么可以做到这一点？
+
+这个动作有没有可能做得比上一次的龟速更快？
+
+从那个最笨的笨办法开始，一路都是上坡路。
+
+很多人会在“聪明的、敏捷的、但是不达标的”的领域长期试图一挥而就，然后长期在一个“随机达标”的水平上飘忽不定。
+
+因为的确存在随机的达标现象，所以在心理上会觉得“我已经找到了办法”，“我现在的方向肯定靠谱”，但是因为这方法其实并不可靠，时灵时不灵，所以这个“我能做到”只是一种半透明的幻觉。
+
+是不敢拿来真的顶用的。
+
+一个方法的可靠性——即稳定的可重复性——要比这个方法可以随机达到的最理想结果重要。
+
+一个每次都画出同样弯弧的方法，要比“时不时可以画出直线，其他时候向随机方向产生弧线，且其结果无法预料和干预”更成功，更有意义，
+
+看似前者连一根直线都没画出来，但它离成功的距离是系统性的，是有限的。
+
+后者看似时不时能搞出一根，但它的结果如此的不稳定，以至于它甚至还不能被称为一种方法，更无从谈起它与目标之间的距离。
+
+先找到这个**百分百成功**的笨办法，然后再将这个笨办法无限的优化，这是一个近乎普适的策略。
+
+**如果给你无限的修改机会，给你无限的时间，你能不能徒手画出一条完美的直线？**
+
   
 
   
+
+  
+
+  
+
+  
+
+  
+
+  
+
+  
+（未完，待续）
 
   
 
