--- a/摘抄本/句子摘录.md
+++ b/摘抄本/句子摘录.md
@@ -1,6 +1,9 @@
 # 句子摘录
 
-  
+> Author: #Anonymity 
+Last update: *03/03/2022* 
+Links: 
+Tags: 
 
 想做到做不到那叫退而求其次，做得到不去做这叫自误。
 
@@ -38,7 +41,7 @@
 
 ---
 
-万事万物相互[助益](https://www.zhihu.com/search?q=%E5%8A%A9%E7%9B%8A&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2358397189%7D)，总教有爱的人得益。
+万事万物相互助益，总教有爱的人得益。
 
 ---
 
@@ -256,7 +259,7 @@
 
 ---
 
-[极端化](https://www.zhihu.com/search?q=%E6%9E%81%E7%AB%AF%E5%8C%96&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2358397189%7D)是一种毋庸置疑的背叛。
+极端化是一种毋庸置疑的背叛。
 
 ---
 
@@ -312,7 +315,7 @@
 
 ---
 
-以学养身，以身养心，是以历经坎坷而沉毅之气不折。志不足恃，气不足恃，才不足恃，唯毅力足恃。内尽其心以事其亲，外崇礼让以接天下。学问纯正，然后践履[成德](https://www.zhihu.com/search?q=%E6%88%90%E5%BE%B7&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2358397189%7D)，可以不辱其身，不忧其亲，不亏其体。
+以学养身，以身养心，是以历经坎坷而沉毅之气不折。志不足恃，气不足恃，才不足恃，唯毅力足恃。内尽其心以事其亲，外崇礼让以接天下。学问纯正，然后践履成德，可以不辱其身，不忧其亲，不亏其体。
 
 ---
 
@@ -434,7 +437,7 @@
 
 恩这个东西，是最容易成仇的。
 
-明白人[避恩](https://www.zhihu.com/search?q=%E9%81%BF%E6%81%A9&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2358397189%7D)如避仇。
+明白人避恩如避仇。
 
 ---
 
