--- a/Anonymity/01 - 家族答集/道德.md
+++ b/Anonymity/01 - 家族答集/道德.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
-Links: [[道德律]] [[道德虚无]] [[无道德社会]] [[学习哲学 - 之一]] [[Anonymity/01 - 家族答集/自由意志]]
+Links: [[道法自然]] [[道德虚无]] [[无道德社会]] [[学习哲学 - 之一]] [[Anonymity/01 - 家族答集/自由意志]]
 Tags:     
 沙海拾金：[[道德1.jpg]]
 
