--- a/Anonymity/01 - 家族答集/道德与伦理.md
+++ b/Anonymity/01 - 家族答集/道德与伦理.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *04/12/2021* 
-Links: [[美德]] [[乱伦]] [[厌倦]] [[冷漠]] [[重感情]] [[道德绑架]] [[简明格言]] [[大众心理学]] [[己所不欲勿施于人]] [[大道理]] [[是非尺]] [[道德律]] [[Anonymity/01 - 家族答集/正义]] 
+Links: [[美德]] [[乱伦]] [[厌倦]] [[冷漠]] [[重感情]] [[道德绑架]] [[简明格言]] [[大众心理学]] [[己所不欲勿施于人]] [[大道理]] [[是非尺]] [[道法自然]] [[Anonymity/01 - 家族答集/正义]] 
 Tags:   
 
 如果你问中文语境的话，那么道德主要指人与人的关系。
