--- a/Anonymity/04 - 社科答集/有重量的善良.md
+++ b/Anonymity/04 - 社科答集/有重量的善良.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *18/09/2021* 
-Links: [[解决996]] [[毋以善小而不为]] [[消除歧视]] [[弱势部门]] [[撒钱]] [[“资本家”]] [[资本家2]] [[政策干预劳动定价]]
+Links: [[解决996]] [[毋以善小而不为]] [[消除歧视]] [[弱势财务部]] [[撒钱]] [[“资本家”]] [[资本家2]] [[政策干预劳动定价]]
 Tags:  
   
 其实只要这个政策严格执行，美团也可以通过涨价解决这个成本。要是哪个竞争对手想搞低价竞争，果断举报它迫使它也不能节省这成本就可以了。
