--- a/Nell Nell/00 - “是什么”系列/道德与伦理.md
+++ b/Nell Nell/00 - “是什么”系列/道德与伦理.md
@@ -3,7 +3,7 @@
 
 > Author: #NellNell 
 Last update: *04/12/2021* 
-Links: [[Anonymity/01 - 家族答集/道德与伦理]] [[道德观]] [[道德]] [[道德律]] [[道德虚无]]
+Links: [[Anonymity/01 - 家族答集/道德与伦理]] [[道德观]] [[道德]] [[道法自然]] [[道德虚无]]
 Tags:  
   
 
