--- a/Anonymity/01 - 家族答集/诚实.md
+++ b/Anonymity/01 - 家族答集/诚实.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *13/11/2021* 
-Links: [[真诚]] [[道德]] [[道德律]] [[先轻信后多疑]] [[善良程度]] [[人设指南]] [[时尚品味]] [[何如不问]] [[论迹论心]] [[虚伪]] [[说谎]] [[两种伪善]] [[美德]] [[批评与赞美]] [[溢美之词]] [[弹性距离]] [[荒谬的偏激]] [[分寸感]] [[冷漠]]
+Links: [[真诚]] [[道德]] [[道法自然]] [[先轻信后多疑]] [[善良程度]] [[人设指南]] [[时尚品味]] [[何如不问]] [[论迹论心]] [[虚伪]] [[说谎]] [[两种伪善]] [[美德]] [[批评与赞美]] [[溢美之词]] [[弹性距离]] [[荒谬的偏激]] [[分寸感]] [[冷漠]]
 Tags: 
 
 诚实到底是什么？
