--- a/Anonymity/02 - 企管答集/经营意识.md
+++ b/Anonymity/02 - 企管答集/经营意识.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *14/09/2021* 
-Links: [[弱势部门]] [[创业契机]] [[创业红线]] [[农村出身]] [[不卑不亢]] [[不卑不亢1]] [[谁说了算]] [[独得之秘]]
+Links: [[弱势财务部]] [[创业契机]] [[创业红线]] [[农村出身]] [[不卑不亢]] [[不卑不亢1]] [[谁说了算]] [[独得之秘]]
 Tags:  # 
 
 
