--- a/Anonymity/04 - 社科答集/小挂锁.md
+++ b/Anonymity/04 - 社科答集/小挂锁.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *13/10/2021* 
-Links: [[本质]] [[法律漏洞]] [[钉钉]] [[想好再干]] [[道德律]] [[异地办公]] [[理由]] [[居安思危]] [[是非尺]] [[冷静期]]
+Links: [[本质]] [[法律漏洞]] [[钉钉]] [[想好再干]] [[道法自然]] [[异地办公]] [[理由]] [[居安思危]] [[是非尺]] [[冷静期]]
 Tags:  
 
 法律保护的是一切正当权益。
