--- a/Anonymity/09 - 神学答集/基督教国家.md
+++ b/Anonymity/09 - 神学答集/基督教国家.md
@@ -1,58 +1,44 @@
 # 基督教国家
-*深受华夏文明影响的韩国，为什么现在却成了一个基督教国家？*
+[中国会成为基督教国家么？](https://www.zhihu.com/question/20755959/answer/2093808410)
+
 > Author: #Anonymity 
-Last update: *27/06/2021* 
-Links: 
-Tags:    
-
-
-
-
-“基督教国家”的基本标准是以基督教为国教，对国家元首的信仰有具体规定。
-
-比如英格兰女王/国王必须是国教圣公会信徒才可以加冕——英国元首自身兼任国教最高领袖。
-
-丹麦、挪威、芬兰、冰岛、希腊都是法律规定基督教为国教，给予特殊地位。这个属于确实无话可说的基督教国家——或者可以叫第一类基督教国家。
-
-第二类基督教国家，没有规定基督教为国教，但是基督教有巨大的政治影响。基本上可以说从实践上不必设想可以实行有违基督核心教义的任何政策——会被占人口极大比重的基督徒直接用选票否决掉。
-
-这一类国家的特点是执政党（或主要执政党之一）有鲜明的基督教成分——或者干脆就是基督教民主政党这类的党派。
-
-比如德国目前的执政党——基督教民主联盟（CDU），也就是默克尔的党——已经连续执政十几年了，而且很可能继续执政下去。
-
-**德国公认杰出而且任期最长的三位总理——阿登纳、科尔和默克尔都是这个党的成员**，基本可以说战后德国历史是由这个党主笔书写的——1949年至1969年，1982年至1998年，2005年至今均为执政党，合计52年执政。
-
-（顺便，遇到谁喊“宗教信徒都无脑”，这条信息一般都会有消音效果。）
-
-美国的共和党也有非常鲜明的基督教色彩。
-
-如果以基督教政党曾经或正在执政计算，那么确实大半个欧洲加几乎整个美洲、小半个非洲都可以算第二类基督教国家。
-
-在亚洲也有，那就是菲律宾。不过菲律宾这个党叫得很奇怪，叫基督教穆斯林民主力量党，在1992-1998，2001-2010年间执政。这党还是个基督教政党，但是加了个名团结穆斯林。
-
-实际上，基督教民主主义政党是像共产国际一样有一个跨国组织的——基民党国际（CDI），并且是现在第二大的国际性政党组织（第一大是社会党国际）。
-
-日常流行的“基督教快没影响力了”的标准共识，其实是非常偏离实际的信息茧房的产物。
-
+Last update: *01/09/2021* 
+Links: [[国教]] [[中国宗教的问题]]
+Tags:      
   
 
-按这个标准，韩国目前还谈不上“基督教国家”。
+会不会，这属于历史发展问题，不是人可以随便说会或者不会的。
 
-第一类估计是很困难的——这多半是有王国性质或从王国时代传下来的——在现代政治体制下要凝聚民意到宣布某个宗教是国教这是非常难以在程序上办到的。
+没人能说一定会，也没人能说不可能。
 
-第二类不是没有可能，但至少目前不是。
+但这里值得一说的，是这个情况并不需要担心。
 
-至于说它为什么快速“基督教化”，这当然首先和韩美的同盟关系有关。
+中国在意识形态上有一些祖传优势：
 
-这个“基督教化”是打引号的，因为韩国的教会神学可以说是大部分是比较原教旨主义的。“原教旨主义神学”在某种意义上讲可以算是一种“反神学的神学”，几乎必然导致得其形而难得其魂。
+1）基数巨大。
 
-这可以被认为是发育幼年期不可避免的幼稚，但也很难说不是一种**隐秘的拒斥**。不深刻，到底是因为尚未深刻、还是因为拒绝深刻，这个是ta们自己要去交的答卷。
+凭着在历史所有阶段都是最大人口规模这个几千年不变的固有属性，中国轻轻松松、自自然然就会成为全球最大宗。
 
-如果是后者，那么现在的这场热闹只不过是一种巨型cosplay，没有观众和赞助商了就会自然消散。
+无论在哪个阵营，中国都会立刻成为该阵营最大的分支，一定是绝对主力。
 
-而你显然不能用cosplay漫展的风靡程度来定义一个国家，否则中国有变成伟大航路国家的风险。
+2）大一统传统。
 
-是不是cosplay，这只有历史才能回答。
+中国有一个天生的“一体化”的强烈的政治传统。几乎所有的意识形态分裂都是暂时的，最终的稳态总是一家独大的主流形态占到压倒多数，居于绝对统治地位。
 
+这种大一统传统甚至到了这样一个地步，会尝试搞儒释道三教合一。
 
+3）超强的“正统”构建能力。
 
+中国有一种行之千年，已经化为下意识本能的正统化的机制，会给一切东西都辨识、界定、推举出一个“正统”来。这个构造水平非常高，以至于常能靠特殊的严肃性、庄重性形成一个一看就让人敬畏和服膺的正统感来。
+
+这三条合在一起是啥意思呢？
+
+是假设有一天中国变成了“基督教国家”的话，恐怕基督教的最高中枢会被中国继承。会是中国教会决定其他教会谁是异端，是中国人为主的枢机团在决定教宗人选，是中国的主教会议在决定权威解释。
+
+神学的正统会移转到中国这边来。
+
+不是中国要去忧虑别国利用宗教来渗透颠覆中国，而是别国要忧虑中国利用宗教来渗透颠覆别国。
+
+因为中国教会会是一个**十来亿人口的，没有内部分裂的、有充分正统感的巨型教会**，以至于其他分支不能不围绕它运转。
+
+到时候谁比较怕还真说不好嘞。
