--- a/Anonymity/03 - 第一性/凭爱分手.md
+++ b/Anonymity/03 - 第一性/凭爱分手.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
-Links: [[不予考虑]] [[恋爱原理]] [[爱的资格]] [[爱的好处]] [[理性的爱]]
+Links: [[紧追不放]] [[恋爱原理]] [[爱的资格]] [[爱的好处]] [[理性的爱]]
 Tags:     #亲密关系 
 沙海拾金： [[因爱分手1.jpg]] [[因爱分手2.jpg]] [[因爱分手3.jpg]] 
 
