--- a/Anonymity/03 - 第一性/大实话.md
+++ b/Anonymity/03 - 第一性/大实话.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *06/10/2021* 
-Links: [[立场分歧]] [[伤害应对]] [[BoyzIIMen]] [[爱怕了]] [[情侣话题]] [[不予考虑]] [[不配被爱]] [[无目的]] [[可爱 - Loveable]] [[抢孩子]] [[别互补]] [[优秀与被爱]] [[恋爱原理]] 
+Links: [[立场分歧]] [[伤害应对]] [[BoyzIIMen]] [[爱怕了]] [[情侣话题]] [[紧追不放]] [[不配被爱]] [[无目的]] [[可爱 - Loveable]] [[抢孩子]] [[别互补]] [[优秀与被爱]] [[恋爱原理]] 
 Tags: #亲密关系 #方法实践SOP 
 
 ……
