--- a/Anonymity/03 - 第一性/紧追不放.md
+++ b/Anonymity/03 - 第一性/紧追不放.md
@@ -1,5 +1,5 @@
-# 不予考虑
-*为什么垃圾男追求 遭到女方委婉拒绝 还继续追不放弃呢?*
+# 紧追不放
+[为什么垃圾男追求 遭到女方委婉拒绝 还继续追不放弃呢?](https://www.zhihu.com/question/397579584/answer/1269935154)
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
