--- a/Anonymity/03 - 第一性/门当户对.md
+++ b/Anonymity/03 - 第一性/门当户对.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
-Links: [[不予考虑]] [[恋爱原理]] [[家族]]
+Links: [[紧追不放]] [[恋爱原理]] [[家族]]
 Tags:    #亲密关系
 
 
