--- a/Anonymity/04 - 社科答集/反犹.md
+++ b/Anonymity/04 - 社科答集/反犹.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
-Links: [[非洲、非洲]] [[芯片前景 - 希望]]
+Links: [[非洲、非洲]] [[芯片前景]]
 Tags:    
 沙海拾金： [[反犹1.jpg]] [[反犹2.jpg]]
 
