--- a/Anonymity/04 - 社科答集/台湾 - 真正目的.md
+++ b/Anonymity/04 - 社科答集/台湾 - 真正目的.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *25/09/2021* 
-Links: [[民主民粹]] [[撒钱]] [[反犹]] [[左转右转2]] [[反弹琵琶]] [[弦外之音]] [[掐脖子的水电站]] [[台湾 - 以武促统]]
+Links: [[民主民粹]] [[撒钱]] [[反犹]] [[左转右转]] [[反弹琵琶]] [[弦外之音]] [[掐脖子的水电站]] [[台湾 - 以武促统]]
 Tags:   
 
 
