--- a/Anonymity/04 - 社科答集/芯片.md
+++ b/Anonymity/04 - 社科答集/芯片.md
@@ -1,9 +1,9 @@
 # 芯片
-*中国大陆明明知道芯片不行，几十年前为什么不发展芯片？*
+[中国大陆明明知道芯片不行，几十年前为什么不发展芯片？](https://www.zhihu.com/question/275316968/answer/497644862)
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
-Links: [[芯片前景 - 希望]]
+Links: [[芯片前景]]
 Tags:   
 
 
