--- a/Anonymity/07 - 军事技术与艺术/军衔.md
+++ b/Anonymity/07 - 军事技术与艺术/军衔.md
@@ -1,10 +1,10 @@
 # 军衔
-*军衔是怎么一回事?*
+[军衔是怎么一回事？](https://www.zhihu.com/question/295242388/answer/504750849)
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
 Links: [[军训]] [[尊师]] [[双胞胎]]
-Tags:  # 
+Tags: 
 
  
 军衔实际上是阶级标志。这其实是在问“军队为什么要有阶级和阶级标志”。
