--- a/Anonymity/13 - 百年未有之变局/杂感2.md
+++ b/Anonymity/13 - 百年未有之变局/杂感2.md
@@ -1,13 +1,10 @@
-# 杂感2
+# 基本尺度
 [杂感2](https://zhuanlan.zhihu.com/p/476683820)
 
 > Author: #Anonymity 
 Last update: *13/03/2022* 
 Links: 
 Tags: 
-  
-
-#基本尺度#
 
 大群大学刚毕业的小孩子，凑在一起你一言我一语的嘲笑“普京犯下低级错误”。
 
