--- a/Anonymity/13 - 百年未有之变局/芯片前景.md
+++ b/Anonymity/13 - 百年未有之变局/芯片前景.md
@@ -1,5 +1,5 @@
-# 芯片前景 - 希望
-*中国芯片产业前景到底怎么样？*
+# 芯片前景
+[中国芯片产业前景到底怎么样？](https://www.zhihu.com/question/305898679/answer/563613133)
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
@@ -8,7 +8,7 @@ Tags:
 
 
 
-我在另一篇回答（**芯片前景 - 态度** - *中国大陆明明知道芯片不行，几十年前为什么不发展芯片？*里曾经严厉的批评中国民间关于芯片产业的盲目乐观。很可能一般人会认为我对中国芯片产业很悲观。
+我在另一篇回答（[中国大陆明明知道芯片不行，几十年前为什么不发展芯片？](https://www.zhihu.com/question/275316968/answer/497644862)）里曾经严厉的批评中国民间关于芯片产业的盲目乐观。很可能一般人会认为我对中国芯片产业很悲观。
 
 恰恰相反，我相信中国芯片产业有希望，而且是巨大的希望。
 
