--- a/Nell Nell/02 - “如何看待”系列/美国大选.md
+++ b/Nell Nell/02 - “如何看待”系列/美国大选.md
@@ -3,7 +3,7 @@
 
 > Author: #NellNell 
 Last update: *25/08/2021* 
-Links: [[拜登之胜]] [[左转右转2]] [[拜登的承诺]] [[特朗普连任]] [[特朗普 - 谥号]] [[特朗普 - 能力]]
+Links: [[拜登之胜]] [[左转右转]] [[拜登的承诺]] [[特朗普连任]] [[特朗普 - 谥号]] [[特朗普 - 能力]]
 Tags:  
 
 
