--- a/Anonymity/01 - 家族答集/操纵.md
+++ b/Anonymity/01 - 家族答集/操纵.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
-Links: [[尊重]] [[不予考虑]] [[爱]]
+Links: [[尊重]] [[紧追不放]] [[爱]]
 Tags:    #方法实践SOP 
 
 
