--- a/Anonymity/02 - 企管答集/国企改革.md
+++ b/Anonymity/02 - 企管答集/国企改革.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *11/09/2021* 
-Links: [[独得之秘]] [[苏联 - 计划经济]] [[计划竞争]] [[人才流失]] [[人才外流]] [[接受但不允许]] [[养老金耗尽]]  [[芯片前景 - 希望]] 
+Links: [[独得之秘]] [[苏联 - 计划经济]] [[计划竞争]] [[人才流失]] [[人才外流]] [[接受但不允许]] [[养老金耗尽]]  [[芯片前景]] 
 Tags:  # 
 
 
