--- a/Anonymity/03 - 第一性/抢孩子.md
+++ b/Anonymity/03 - 第一性/抢孩子.md
@@ -3,7 +3,7 @@
   
 > Author: #Anonymity 
 Last update: *06/10/2021* 
-Links: [[结婚条件]] [[Anonymity/03 - 第一性/值得一嫁]] [[不予考虑]] [[恋爱原理]] [[所托非人]] [[直截了当]] [[全职太太]] [[稳重]] [[渣起来]] [[爱]]
+Links: [[结婚条件]] [[Anonymity/03 - 第一性/值得一嫁]] [[紧追不放]] [[恋爱原理]] [[所托非人]] [[直截了当]] [[全职太太]] [[稳重]] [[渣起来]] [[爱]]
 Tags: #亲密关系 #方法实践SOP  
 
 这面的具体情节什么的就都不谈了——这个无法根据单方面的叙述来做判断。
