--- a/Anonymity/03 - 第一性/生包子.md
+++ b/Anonymity/03 - 第一性/生包子.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *20/10/2021* 
-Links:  [[门当户对]] [[Anonymity/01 - 家族答集/教养]] [[结婚条件]] [[不予考虑]] [[父母反对婚姻]] [[爱无筹码]] [[大男子主义]] [[绅士风度]] [[临终一面]] [[立场分歧]] [[直截了当]] [[作]] [[下药]] [[先轻信后多疑]] [[BoyzIIMen]] [[何如不问]] [[快餐式]] [[公开换安全]]
+Links:  [[门当户对]] [[Anonymity/01 - 家族答集/教养]] [[结婚条件]] [[紧追不放]] [[父母反对婚姻]] [[爱无筹码]] [[大男子主义]] [[绅士风度]] [[临终一面]] [[立场分歧]] [[直截了当]] [[作]] [[下药]] [[先轻信后多疑]] [[BoyzIIMen]] [[何如不问]] [[快餐式]] [[公开换安全]]
 Tags: #亲密关系 
 
 这哪里是你不懂事？
