--- a/Anonymity/03 - 第一性/身价.md
+++ b/Anonymity/03 - 第一性/身价.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
-Links: [[恋爱原理]] [[不予考虑]] [[爱]] [[无价之宝]] [[贞操无价]]
+Links: [[恋爱原理]] [[紧追不放]] [[爱]] [[无价之宝]] [[贞操无价]]
 Tags:   #方法实践SOP   
 
 
