--- a/Anonymity/04 - 社科答集/独得之秘.md
+++ b/Anonymity/04 - 社科答集/独得之秘.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
-Links: [[先进制度]] [[Anonymity/01 - 家族答集/自信]] [[5G]] [[5G - 未来展望2]] [[芯片前景 - 希望]] [[芯片]] [[芯片风口]] [[工程师]]
+Links: [[先进制度]] [[Anonymity/01 - 家族答集/自信]] [[5G]] [[5G - 未来展望2]] [[芯片前景]] [[芯片]] [[芯片风口]] [[工程师]]
 Tags:    
 
 
