--- a/Anonymity/04 - 社科答集/程序员前景.md
+++ b/Anonymity/04 - 社科答集/程序员前景.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
-Links: [[职业规划]] [[芯片风口]] [[芯片]] [[芯片前景 - 希望]] [[5G]] 
+Links: [[职业规划]] [[芯片风口]] [[芯片]] [[芯片前景]] [[5G]] 
 Tags:  
 
  
