--- a/Anonymity/13 - 百年未有之变局/所谓大战略家.md
+++ b/Anonymity/13 - 百年未有之变局/所谓大战略家.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
-Links: [[帝国病]] [[帝国的烂疮]] [[王天下]] [[左转右转2]] [[超英赶美]]
+Links: [[帝国病]] [[帝国的烂疮]] [[王天下]] [[左转右转]] [[超英赶美]]
 Tags:  
 
 
