--- a/Nell Nell/01 - “怎么办”系列/走到一起.md
+++ b/Nell Nell/01 - “怎么办”系列/走到一起.md
@@ -3,7 +3,7 @@
 
 > Author: #NellNell 
 Last update: *20/07/2021* 
-Links: [[爱]] [[一生之诺]] [[理想婚姻]] [[理想]] [[恋爱原理]] [[结婚条件]] [[Anonymity/03 - 第一性/值得一嫁]] [[不予考虑]] [[立场分歧]]
+Links: [[爱]] [[一生之诺]] [[理想婚姻]] [[理想]] [[恋爱原理]] [[结婚条件]] [[Anonymity/03 - 第一性/值得一嫁]] [[紧追不放]] [[立场分歧]]
 Tags:  
   
 
