--- a/Anonymity/04 - 社科答集/日本沉没.md
+++ b/Anonymity/04 - 社科答集/日本沉没.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *20/10/2021* 
-Links: [[忠与叛]] [[Anonymity/03 - 第一性/萌]] [[日本早餐]] [[不准参赛]] [[恐惧得度量]] [[仇日]] [[中国刀]] [[聪明族]] [[航母]] [[西方 & 东方]]
+Links: [[忠与叛]] [[Anonymity/03 - 第一性/萌]] [[日本早餐]] [[不准参赛]] [[恐惧的度量]] [[仇日]] [[中国刀]] [[聪明族]] [[航母]] [[西方 & 东方]]
 Tags:    
   
 
