--- a/Anonymity/09 - 神学答集/不再相信曾经的神了怎么办？.md
+++ b/Anonymity/09 - 神学答集/不再相信曾经的神了怎么办？.md
@@ -1,8 +1,8 @@
- [不再相信曾经的神了怎么办?](https://www.zhihu.com/question/452617540/answer/1814490681)
+[不再相信曾经的神了怎么办?](https://www.zhihu.com/question/452617540/answer/1814490681)
 
 > Author: #Anonymity 
 Last update: *14/08/2021* 
-Links: [[恐惧得度量]] 
+Links: [[恐惧的度量]] 
 Tags:  #待命名TBN 
   
 
