--- a/Nell Nell/01 - “怎么办”系列/想太多.md
+++ b/Nell Nell/01 - “怎么办”系列/想太多.md
@@ -3,7 +3,7 @@
 
  > Author: #NellNell 
 Last update: *28/08/2021* 
-Links: [[恐惧得度量]] [[克服恐惧]] [[死亡 - 恐惧]] [[揉不得沙子]] [[保持快乐]] 
+Links: [[恐惧的度量]] [[克服恐惧]] [[死亡 - 恐惧]] [[揉不得沙子]] [[保持快乐]] 
 Tags: 
 
 表面上是想得太多。实际上是心里怕得太多。
