--- a/Nell Nell/待分类/少年感.md
+++ b/Nell Nell/待分类/少年感.md
@@ -4,7 +4,7 @@
 
 > Author: #NellNell 
 Last update: *21/08/2021* 
-Links: [[时间不够]] [[《太古和其他的时间》]] [[恐惧得度量]] [[死亡 - 恐惧]] [[烦躁]] 
+Links: [[时间不够]] [[《太古和其他的时间》]] [[恐惧的度量]] [[死亡 - 恐惧]] [[烦躁]] 
 Tags:   
 
   
