--- a/Anonymity/01 - 家族答集/反压力.md
+++ b/Anonymity/01 - 家族答集/反压力.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *13/10/2021* 
-Links: [[恐惧得度量]] [[烦躁]] [[抑郁的潮]] [[Anonymity/01 - 家族答集/战胜抑郁]] [[FURY]] [[做计划]] [[拖拉机]] [[祷告观]] [[悲观与乐观]] [[励志]] [[期望管理]] [[期望破灭]] [[一事无成]] [[从心所欲不逾矩]] [[时间不够]] [[静气]] [[穷开心]] [[看得见爱的眼睛]] [[爱]] [[爱得痛苦]]
+Links: [[恐惧的度量]] [[烦躁]] [[抑郁的潮]] [[Anonymity/01 - 家族答集/战胜抑郁]] [[FURY]] [[做计划]] [[拖拉机]] [[祷告观]] [[悲观与乐观]] [[励志]] [[期望管理]] [[期望破灭]] [[一事无成]] [[从心所欲不逾矩]] [[时间不够]] [[静气]] [[穷开心]] [[看得见爱的眼睛]] [[爱]] [[爱得痛苦]]
 Tags:   
 
 
