--- a/Anonymity/04 - 社科答集/仇中.md
+++ b/Anonymity/04 - 社科答集/仇中.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *04/09/2021* 
-Links: [[仇日]] [[爱国行为]] [[恐惧得度量]] [[王天下]]
+Links: [[仇日]] [[爱国行为]] [[恐惧的度量]] [[王天下]]
 Tags:  
 
 
