--- a/Nell Nell/01 - “怎么办”系列/亲人病重.md
+++ b/Nell Nell/01 - “怎么办”系列/亲人病重.md
@@ -3,7 +3,7 @@
 
 > Author: #NellNell 
 Last update: *17/07/2021* 
-Links: [[恐惧得度量]] [[克服恐惧]] [[爱]]
+Links: [[恐惧的度量]] [[克服恐惧]] [[爱]]
 Tags:  
 
 面对亲人的病重，我只说一点，就是尽可能让ta获得平安。
