--- a/Nell Nell/01 - “怎么办”系列/缺爱.md
+++ b/Nell Nell/01 - “怎么办”系列/缺爱.md
@@ -3,7 +3,7 @@
 
 > Author: #NellNell 
 Last update: *04/12/2021* 
-Links:  [[Anonymity/01 - 家族答集/缺爱]] [[缺爱症]] [[缺爱者的自救]]
+Links:  [[拜物癖]] [[缺爱症]] [[缺爱者的自救]]
 Tags:   
 
 遇到这种问题，我一般都会建议去参与一些公益活动。
