--- a/Nell Nell/待分类/丧的本质.md
+++ b/Nell Nell/待分类/丧的本质.md
@@ -3,7 +3,7 @@
 
 > Author: #NellNell 
 Last update: *21/08/2021* 
-Links: [[丧]] [[活死人]] [[活死人2]] [[悲观与乐观]] [[缺爱者的自救]] [[Anonymity/01 - 家族答集/缺爱]][[缺爱症]] [[无爱信仰]]
+Links: [[丧]] [[活死人]] [[活死人2]] [[悲观与乐观]] [[缺爱者的自救]] [[拜物癖]][[缺爱症]] [[无爱信仰]]
 Tags:  
 沙海拾金：[[凡事盼望.PNG]]
 
