--- a/Anonymity/03 - 第一性/喜欢.md
+++ b/Anonymity/03 - 第一性/喜欢.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *06/11/2021* 
-Links: [[主动的被动]] [[最高效途径]][[Anonymity/01 - 家族答集/缺爱]] [[Nell Nell/其它/缺爱]] [[爱得痛苦]] [[爱怕了]] [[爱与欲望]] [[占有欲]] [[控制欲]]
+Links: [[主动的被动]] [[最高效途径]][[拜物癖]] [[Nell Nell/其它/缺爱]] [[爱得痛苦]] [[爱怕了]] [[爱与欲望]] [[占有欲]] [[控制欲]]
 Tags:   #亲密关系
 
 
