--- a/Nell Nell/00 - “是什么”系列/神爱世人.md
+++ b/Nell Nell/00 - “是什么”系列/神爱世人.md
@@ -3,7 +3,7 @@
 
 > Author: #NellNell 
 Last update: *04/09/2021* 
-Links: [[爱]] [[Anonymity/01 - 家族答集/缺爱]] [[对待讨厌的人]] [[以爱应恨]] [[你讨厌的那种人]] [[讨厌的人]] [[福音 - 之一]] [[以弱悯强]] [[同情的资格]] [[共情与揣测]] [[自卑]] [[Anonymity/03 - 第一性/值得一嫁]]
+Links: [[爱]] [[拜物癖]] [[对待讨厌的人]] [[以爱应恨]] [[你讨厌的那种人]] [[讨厌的人]] [[福音 - 之一]] [[以弱悯强]] [[同情的资格]] [[共情与揣测]] [[自卑]] [[Anonymity/03 - 第一性/值得一嫁]]
 Tags:   
 
 “神爱世人”，就是**上帝要经验你所经验的一切**。
