--- a/Anonymity/01 - 家族答集/别墅有灰.md
+++ b/Anonymity/01 - 家族答集/别墅有灰.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity
 Last update: *23/07/2021* 
 Links:
-Tags: #方法实践SOP  #好物推荐  
+Tags: #方法实践SOP  #一些推荐  
 
 
 别再迷信“开窗开门换气”，窗和门一开，阿姨要累死。
