--- a/Anonymity/01 - 家族答集/心窄路不宽.md
+++ b/Anonymity/01 - 家族答集/心窄路不宽.md
@@ -1,10 +1,10 @@
 # 心窄路不宽
-*怎么理解心窄路不宽呢？*
+[怎么理解心窄路不宽呢？](https://www.zhihu.com/question/420199501/answer/1463122638)
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
-Links:
-Tags:  
+Links: [[原谅]] [[宽恕秘诀]] [[傲慢]] [[傲慢之路]] [[敌人]] [[Circle-Of-Shame]] [[同情的资格]]
+Tags:  #内在构建 
 
 
 
