--- a/Anonymity/08 - 文艺答集/疗愈艺术.md
+++ b/Anonymity/08 - 文艺答集/疗愈艺术.md
@@ -115,6 +115,8 @@ Tags:    #方法实践SOP
 
 亲自走过一轮，将会大大的有利于对抑郁症免疫——这实际上是一剂抑郁疫苗。
 
+---
+
 note 1
 
 不错，你的进度不能用所谓的“直度”来标定。而要用你对方法的优化来标定。你要的百发百中的结果——这种结果是可以蒙出来的。只不过蒙出两个来又如何？睡几觉就原形毕露，回到解放前了。你要的是只要照做，一定能画出高质量直线的方法——哪怕你“状态”不好都可以很直的方法。找到这方法，才是你不动如山的要害。有多逼近这方法，才应该是衡量你进度的基本方式，而不是“今天有多直”。
@@ -207,6 +209,7 @@ note 3
 
 在你的身体里，哪里藏着这根直线？
 
+---
 
 note 4
 
@@ -324,7 +327,6 @@ note 6
 
 **飞花摘叶，皆可伤敌。**
 
-（未完，待续）
  
 ps：
 一个可以在任何正规长方形纸上得到三十度角的方法：  
@@ -334,6 +336,8 @@ ps：
 
 ![](https://pic4.zhimg.com/v2-e8534a8cd06d6e3b5ec1bd032678d7ab_qhd.jpg)
   
+---
+
 note 7
 
 难攻不落[小田原](https://www.zhihu.com/search?q=%E5%B0%8F%E7%94%B0%E5%8E%9F&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A1904038706%7D)，那是因为攻的人总是一鼓作气，再而衰，三而竭。
@@ -370,6 +374,7 @@ note 8
 
 那就把山搬过来。
 
+---
 
 note 9
 
@@ -419,6 +424,7 @@ note 9
 
 **如果给你无限的修改机会，给你无限的时间，你能不能徒手画出一条完美的直线？**
 
+---
 
 note 10
 
@@ -438,6 +444,19 @@ note 10
 
 且要比之前更直。
 
+---
+
+note 11
+
+现在要你画出上面那根示范线，你有多大成功的概率？
+
+![](https://pica.zhimg.com/50/v2-faecd4d204cfee18fe505196934d4b2e_720w.jpg?source=1940ef5c)
+
+你们有没有想过一群人一起研究，可以更早的解决这个问题？
+
+问题是，一群人如何能一起研究？
+
+（未完，待续）
  
 
   #未完待续TBC 
