--- a/Anonymity/09 - 神学答集/祷告观.md
+++ b/Anonymity/09 - 神学答集/祷告观.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity
 Last update: *25/07/2021* 
 Links: [[祈祷与祝福]] [[Sin]] [[厉害思维]] [[爱]] [[财富观]] [[可信标准]] [[学习的快乐]] [[聪明的笨功夫]] [[学习哲学 - 之一]] 
-Tags: #方法实践SOP 
+Tags: #方法实践SOP #内在构建 
 
 借这个地方阐述一种祷告观。不代言官方立场，只是表达一种理解。
 
