--- a/Anonymity/01 - 家族答集/学好会计.md
+++ b/Anonymity/01 - 家族答集/学好会计.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity
 Last update: *23/07/2021* 
 Links: [[高等教育]] [[能力]] [[学好语文]] [[世界史]] 
-Tags:   #好物推荐  #方法实践SOP
+Tags:   #一些推荐  #方法实践SOP
 
 
 
