--- a/Anonymity/04 - 社科答集/俄罗斯.md
+++ b/Anonymity/04 - 社科答集/俄罗斯.md
@@ -5,18 +5,19 @@
 Last update: *14/09/2021* 
 Links: [[忠与叛]] [[反犹]] [[埃及文明]] [[至极浪漫]] [[史诗感]] [[联盟陆军]] [[和平演变]] [[海外团结]]
 Tags:   
+  
 
 独一无二的土地，自然有独一无二的人民。独一无二，本身就是魅力的保证。
 
 俄罗斯最大的独一无二在于长期面对严酷的环境带来的不可测的明天和短暂的预期寿命。
 
-这压力恒常的压在所有人的肩上，塑造出了人对对美和牺牲有额外的向往和对死亡的适应。
+这压力恒常的压在所有人的肩上，塑造出了人对美和牺牲的宗教性的强烈情感。
 
 这也是俄罗斯这个国家最大的魅力根源——与生俱来，从民族历史里继承下来的必死的觉悟所孕育出来的一种深入骨髓的悲怆感。
 
 月明星稀，乌鹊南飞，绕树三匝，无枝可依。
 
-这种自然而然的向死而生的生活态度，使得俄罗斯的文学也罢、社会制度也罢、人的精神特质也罢，都有一种颇为类似“如夕阳下樱花凋谢”般的浪漫主义。
+这种自然而然的向死而生的生活态度，使得俄罗斯的文学也罢、社会制度也罢、人的精神特质也罢，都有一种颇为类似“如夕阳下樱花凋谢”般的[浪漫主义](https://www.zhihu.com/search?q=%E6%B5%AA%E6%BC%AB%E4%B8%BB%E4%B9%89&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2118160811%7D)。
 
 这东西是浪漫主义的根源。
 
@@ -28,5 +29,19 @@ Tags:
 
 陈陈相因，凝成了这么一个“战斗民族”。
 
-  
+普希金 — 致诽谤者
+
+普希金一生与人决斗三十余次，最后因决斗而死。
+
+这类宁折不弯、重死轻生的莽气（toughness）在俄罗斯文学里几乎满篇都是。
+
+俄罗斯人所谓的经典浪漫，常是为素不相识的受辱女性的名誉而提出决斗，在绝对公平的对决中被杀，还在弥留之际对女士道歉，遗憾未能完成责任，还安慰对方不必放在心上。
+
+或者是另一种类型——于事后听说某人侮辱了女神，于是私下向对方提起挑战。无论活下来的是自己还是对方，最后都不对女神主动提起。
+
+这种行为模式在俄罗斯文学里常以各种变种四处出现。
+
+可惜现在俄罗斯文学，尤其是经典的那些很少人涉猎了。
+
+曾几何时，这曾经是中国人普遍会涉猎的东西。
  
