--- a/Anonymity/05 - 科学答集/应用科学/雨伞.md
+++ b/Anonymity/05 - 科学答集/应用科学/雨伞.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity 
 Last update: *25/09/2021* 
 Links: [[藏书]] [[包装]] [[循环买卖]] [[第一辆车]] [[出手]] [[奢侈品1]] [[奢侈品]] [[钻石]] [[厨房清洁策略]] [[口红色号]] [[家族]] [[学习的快乐]]
-Tags: #好物推荐
+Tags: #一些推荐
 
 
 注意以下指标：
