--- a/Anonymity/08 - 文艺答集/军服.md
+++ b/Anonymity/08 - 文艺答集/军服.md
@@ -1,5 +1,5 @@
 # 军服
-*哪个国家的军服最好看？*
+[哪个国家的军服最好看？](https://www.zhihu.com/question/67266406/answer/1214233663)
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
