--- a/Anonymity/08 - 文艺答集/好书.md
+++ b/Anonymity/08 - 文艺答集/好书.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity
 Last update: *23/07/2021* 
 Links: [[学习哲学 - 之一]] [[高中书目]] [[藏书]]
-Tags:  #方法实践SOP  #好物推荐 
+Tags:  #方法实践SOP  #一些推荐 
 
  
 符合以下几个标准的书值得你重点考虑：
