--- a/Anonymity/08 - 文艺答集/调味料.md
+++ b/Anonymity/08 - 文艺答集/调味料.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity
 Last update: *23/07/2021* 
 Links: [[厨艺高低]] [[SOP - 蒸蛋羹]] 
-Tags:  #好物推荐  
+Tags:  #一些推荐  
 
  
 给你们一个网站，足以解决烹饪苦手所面临的绝大多数调味问题。
