--- a/Anonymity/04 - 社科答集/程序员前景.md
+++ b/Anonymity/04 - 社科答集/程序员前景.md
@@ -1,5 +1,5 @@
 # 程序员前景
-*感觉中国程序员前景一片灰暗，是这样吗?*
+[感觉中国程序员前景一片灰暗，是这样吗？](https://www.zhihu.com/question/389889237/answer/1340483247)
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
