--- a/Anonymity/04 - 社科答集/身病心病.md
+++ b/Anonymity/04 - 社科答集/身病心病.md
@@ -1,5 +1,5 @@
-# 国民心理
-*武汉人目前的心情是怎么样的?*
+# 身病心病
+[武汉人目前的心情是怎么样的？](https://www.zhihu.com/question/367563363/answer/984765809)
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
