--- a/Anonymity/08 - 文艺答集/地方菜.md
+++ b/Anonymity/08 - 文艺答集/地方菜.md
@@ -1,5 +1,5 @@
-# 连锁餐厅与地方菜
-*如何评价“连锁餐厅成功毁掉了中国地方菜”的观点?*
+# 地方菜
+[如何评价“连锁餐厅成功毁掉了中国地方菜”的观点？](https://www.zhihu.com/question/395001026/answer/1469271211)
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
