--- a/Anonymity/13 - 百年未有之变局/乌军吸毒问题.md
+++ b/Anonymity/13 - 百年未有之变局/乌军吸毒问题.md
@@ -1,4 +1,5 @@
- [乌军吸毒问题](https://zhuanlan.zhihu.com/p/494652620)
+# 乌军吸毒问题
+[乌军吸毒问题](https://zhuanlan.zhihu.com/p/494652620)
 
 > Author: #Anonymity 
 Last update: *08/04/2022* 
