--- a/Anonymity/13 - 百年未有之变局/几点注意.md
+++ b/Anonymity/13 - 百年未有之变局/几点注意.md
@@ -1,4 +1,5 @@
- [几点注意](https://zhuanlan.zhihu.com/p/490505795)
+# 几点注意
+[几点注意](https://zhuanlan.zhihu.com/p/490505795)
 
 > Author: #Anonymity 
 Last update: *08/04/2022* 
