--- a/Anonymity/13 - 百年未有之变局/堆叠的轻信.md
+++ b/Anonymity/13 - 百年未有之变局/堆叠的轻信.md
@@ -1,4 +1,5 @@
- [堆叠的轻信](https://zhuanlan.zhihu.com/p/493324354)
+# 堆叠的轻信
+[堆叠的轻信](https://zhuanlan.zhihu.com/p/493324354)
 
 > Author: #Anonymity 
 Last update: *08/04/2022* 
