--- a/Anonymity/13 - 百年未有之变局/核终战.md
+++ b/Anonymity/13 - 百年未有之变局/核终战.md
@@ -1,4 +1,5 @@
- [核终战](https://zhuanlan.zhihu.com/p/484578437)
+# 核终战
+[核终战](https://zhuanlan.zhihu.com/p/484578437)
 
 > Author: #Anonymity 
 Last update: *25/03/2022* 
