--- a/Anonymity/04 - 社科答集/政权合法性.md
+++ b/Anonymity/04 - 社科答集/政权合法性.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *13/10/2021* 
-Links: [[性命双修]] [[国民心理]] [[“大众心理学”]] [[神话心理与迷信心理]] [[Anonymity/01 - 家族答集/宏大叙事]] [[自然法]] [[皆有其时]] [[只留好人]]
+Links: [[性命双修]] [[身病心病]] [[“大众心理学”]] [[神话心理与迷信心理]] [[Anonymity/01 - 家族答集/宏大叙事]] [[自然法]] [[皆有其时]] [[只留好人]]
 Tags:   
 
 “论证合法性”，其实并不是一个学术问题，而是一种“全地图心理治疗”。
