--- a/Anonymity/04 - 社科答集/清白体育.md
+++ b/Anonymity/04 - 社科答集/清白体育.md
@@ -1,13 +1,11 @@
-# 孙杨的清白
+# 清白体育
 [孙杨清白吗？](https://www.zhihu.com/question/375389407/answer/1048049546)
 
 > Author: #Anonymity
-Last update: *23/07/2021* 
+Last update: *19/04/2022* 
 Links: [[Anonymity/01 - 家族答集/自信]]
 Tags:  
 
- 
-这是接着 [@老魏Joshua](https://www.zhihu.com/people/42e6f29f2090d82400fd1ca364efb101) 的答案写的。
 
 答案是——职业体育圈，对于什么叫做“干净”的定义和知乎众的一般想象是不一致的。
 
@@ -25,7 +23,7 @@ Tags:
 
 也有更浓、更滑、更轻、更弹的竞争。
 
-兴奋剂和各种训练补剂的竞争只不过是一个方面而已。
+[兴奋剂](https://www.zhihu.com/search?q=%E5%85%B4%E5%A5%8B%E5%89%82&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A1048049546%7D)和各种训练补剂的竞争只不过是一个方面而已。
 
 各种“哮喘药”“多动症药”“安眠药”，各种胶水、鲨鱼皮、高弹性弓片、科技鞋交叉助攻，可以说现在在赛场上比赛的已经很难说是人了。
 
@@ -39,7 +37,7 @@ Tags:
 
 中国已经成年，比这大的多的骄傲已经比比皆是，这些小小得失，早已应该不在眼中了。
 
-反倒是这个手续是否合规问题有点现实的看点。但这是纯国际法实践的技术性看点，和国家荣誉没什么关系。
+反倒是这个手续是否合规问题有点现实的看点。但这是纯[国际法](https://www.zhihu.com/search?q=%E5%9B%BD%E9%99%85%E6%B3%95&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A1048049546%7D)实践的技术性看点，和国家荣誉没什么关系。
 
 我更希望各位对金牌少点不该有的兴奋。当然得了是好的，但是不要上升到“国家民族的荣耀”这个级别。
 
@@ -91,6 +89,8 @@ Tags:
 
 他这样是可爱，你这样就是讨打。
 
+---
+
 有人问“如果世界冠军不值得骄傲，还有什么值得骄傲”。
 
 首先，不推荐“总要找到某种可以骄傲的东西才能活下去”这个人生模式。因为这种模式埋藏着更深的负面因素。当你有得骄傲的时候你对失去这个骄傲总是感到恐惧（否则为什么这里有这么多怒吼者呢？）
@@ -115,7 +115,8 @@ Tags:
 
 这就是我说的尺度问题。
 
+---
+
 人当然要有自信才行。但是“自信”到底应该是什么？
 
-[中华文明的自信来源于何处？](https://www.zhihu.com/question/269905766/answer/510828072)
-
+[中华文明的自信来源于何处？1488 赞同 · 153 评论回答](https://www.zhihu.com/question/269905766/answer/510828072)
