--- a/摘抄本/句子摘录.md
+++ b/摘抄本/句子摘录.md
@@ -1,11 +1,52 @@
 # 句子摘录
 
 > Author: #Anonymity 
-Last update: *03/03/2022* 
+Last update: *22/04/2022* 
 Links: 
 Tags: 
 
+怀疑指向确定性的增加，而不是确定性的减少——它总是提出一系列有鲜明的可证伪性的、并富有效率和经济性的方法来不断的得出进一步的结论。 
 
+猜疑则总是在提出不具备可证伪性或无效率、不经济的方法，只会徒然增加对不确定性的恐惧。 
+
+前者越来越驱动决策和行动，后者则恰恰相反。
+
+  ——[想法](https://www.zhihu.com/pin/1500810042437320704)
+  
+---
+  
+ 政治实在不是没有管理经验和领导经验的人所能有效讨论的话题。  
+  
+没有实践经验的痕迹，就没有谈论的基本基础。
+
+——[想法](https://www.zhihu.com/pin/1500575117885763584)
+
+---
+
+人只能用一种有实践的理论去对抗另一种有实践的理论。 而不能用一种没实践的理论去对抗有实践的理论。 
+
+后者其实是一个无效的方法。
+
+——[想法](https://www.zhihu.com/pin/1500582812322942976)
+
+---
+
+把一切人生中维持性的事务构建成习惯；
+
+把人生中进取性的价值追求构建成瘾。
+
+——[《习惯》](https://www.zhihu.com/question/22573936/answer/1320747151)
+
+
+---
+
+爱不是“送给对方全世界”，爱是无声的把全世界放在对方伸手可及的地方，等对方来拿。
+
+爱是主动的被动。
+
+——[《主动的被动》](https://www.zhihu.com/question/29139583/answer/2206995808)  
+
+---
 
 世界的存亡，皆不如你重要。
 
