--- a/摘抄本/比喻摘录.md
+++ b/摘抄本/比喻摘录.md
@@ -2,8 +2,9 @@
 [你听过的最好的比喻是什么？](https://www.zhihu.com/question/20009520/answer/2126305023)
 
 > Author: #Anonymity , 秦绮徽
-Last update: *30/09/2021* 
+Last update: *18/04/2022* 
 授权许可：[[转载授权3.PNG]]
+
 
 ——奶萌的威胁——
 
@@ -201,7 +202,7 @@ ta们所谓“额外的礼遇”，更类似“所有的犯人都要打一百杀
 
   
 
-——几包[番茄酱](https://www.zhihu.com/search?q=%E7%95%AA%E8%8C%84%E9%85%B1&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2126305023%7D)——
+——几包番茄酱——
 
 无差别尊重，是不是意味着无限的尊重？
 
@@ -279,7 +280,7 @@ ta们所谓“额外的礼遇”，更类似“所有的犯人都要打一百杀
 
 ——法官位——
 
-坐好你法官的位子，坐久了你就会明白正确的态度是什么。你很快会停止对控辩双方的偏向立场感到愤怒。控辩双方不是来跟你呈现真相的，但他们能帮助你发现真相——虽然这并不见得是他们的目的。
+坐好你法官的位子，坐久了你就会明白正确的态度是什么。你很快会停止对[控辩](https://www.zhihu.com/search?q=%E6%8E%A7%E8%BE%A9&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2126305023%7D)双方的偏向立场感到愤怒。控辩双方不是来跟你呈现真相的，但他们能帮助你发现真相——虽然这并不见得是他们的目的。
 
   
 
@@ -303,7 +304,7 @@ ta们所谓“额外的礼遇”，更类似“所有的犯人都要打一百杀
 
   
 
-那本来是你唯一的活路，奈何你歧视了它，你偏偏就最不会去选它。这倒不见得是在说[宗教信仰](https://www.zhihu.com/search?q=%E5%AE%97%E6%95%99%E4%BF%A1%E4%BB%B0&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2126305023%7D)，而是指各种工作方法、人生态度。
+那本来是你唯一的活路，奈何你歧视了它，你偏偏就最不会去选它。这倒不见得是在说宗教信仰，而是指各种工作方法、人生态度。
 
   
 
@@ -479,10 +480,170 @@ ta手里的本来就不是个鸡蛋，而是个手榴弹，你也不是个温暖
 
 ——导盲——
 
-再往下的第四集团国家——譬如澳大利亚、加拿大、荷兰、丹麦……还有[立陶宛](https://www.zhihu.com/search?q=%E7%AB%8B%E9%99%B6%E5%AE%9B&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2126305023%7D)、波兰、乌克兰这些，说句实话在这些“高年级生”眼里，在客观实践上只能靠别人来当[导盲](https://www.zhihu.com/search?q=%E5%AF%BC%E7%9B%B2&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2126305023%7D)助手。
+再往下的第四集团国家——譬如澳大利亚、加拿大、荷兰、丹麦……还有[立陶宛](https://www.zhihu.com/search?q=%E7%AB%8B%E9%99%B6%E5%AE%9B&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2126305023%7D)、波兰、乌克兰这些，说句实话在这些“高年级生”眼里，在客观实践上只能靠别人来当导盲助手。
 
   
 
 往哪边走全看谁牵着ta的手。
+
+——汤圆——
+
+你如果普遍应用“侮辱测试”为构建关系的先导手段，就等于已经放弃了真正成就什么大事业的基本资格。因为义不受辱。
+
+  
+
+你必定缺少义士辅佐，于是一切对你有真实威胁的事你根本不敢托付与人。
+
+  
+
+而一个人再牛气冲天，毕竟还是一个人，就是把你搓成粉又能包几个汤圆？
+
+——垃圾——
+
+在这之前，[嫉妒者](https://www.zhihu.com/search?q=%E5%AB%89%E5%A6%92%E8%80%85&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2126305023%7D)客观上会推动人类社会进步，但ta们自己却是耗材和燃料。
+
+  
+
+ta们的作用的确不可或缺，但世界绝不会去犯愁没有这种工具和燃料可用。
+
+  
+
+这就好像有人利用垃圾发电，这绝不是丢垃圾的人的功劳，无必要的制造垃圾仍然是罪行。
+
+  
+
+被选为燃料，你只是在客观上有贡献，你本身是没有功劳的，功劳要归于那位“变废为宝”历史主宰。
+
+  
+
+不要因为一切的恶（包括恶的天性）都有其不可或缺的价值，就认为它们应该受到鼓励或者宽纵。
+
+  
+
+多想想清楚。
+
+——龟波气功——
+
+人类也不是历史的主宰。人类根本做不到“认为xxx变化是好的，就造就这个变化”这样的“社会操纵术”。历史的真实机制是各种伟力交互作用，产生结果，然后人类不断脑补自己在对它有某种控制罢了。这种“脑补”是[文艺复兴](https://www.zhihu.com/search?q=%E6%96%87%E8%89%BA%E5%A4%8D%E5%85%B4&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2126305023%7D)之后，人类产生的现代性自觉的一个部分，是一种人本主义的观点。一种“是我们而不是别的什么在主宰一切”的集体自大狂情。
+
+  
+
+其中二程度如同对着电梯门演示自己的龟波气功能把门震开的小朋友。
+
+  
+
+“你看，我要它开就开”
+
+  
+
+叮～
+
+  
+
+“嗨！！”
+
+——热水袋不离题——
+
+当你觉得我“离题”了，先考虑清楚一个更前置的问题——问问题的人自己是不是离题了。
+
+  
+
+我不关心人的question，我关心的是人的problem。
+
+  
+
+你说肚子疼，医生叫你验血，你难道要说医生离题？
+
+  
+
+“医生我疼的是肚子，你干嘛割我手指？”
+
+  
+
+要不你还是回家捂热水袋吧，这“不离题”。
+
+——松狼二象——
+
+这简直是废话——难道你不找一个见多识广深谋远虑的老板、上司、老师、合伙人……你倒要只找一些见识不如你，考虑问题没你周全的人合作？
+
+  
+
+那么对方岂不是又该躲开你？
+
+  
+
+于是最后情况稳定在只有两个互相觉得对方是武大郎而自己是武松的人才能合作这种奇妙的状态？
+
+  
+
+——不过，悲凉的是，现实中还真的有不少这种全靠松郎二象性撑着的所谓企业。
+
+  
+
+但可想而知，这样的所谓企业，说白了就是武大郎开店，很难引入真正先进的智力资源，最后总是要崩的。
+
+  
+
+松郎二象性根本无法作为一个有意义的解决方案。
+
+  
+
+——自掘坟墓——
+
+欧洲最近又是与俄罗斯决裂，又是在中国面前大谈“must”，实在是有点脱离现实太远了。自己站在坑里，还在不停的挖土往别人身上抛，以为得胜。
+
+——无视庄家——
+
+中国之强，已经强到了无视规则的地步。
+
+我们可以高席安坐，
+
+等到庄家开了宝，
+
+再下赌注。
+
+庄家一样只能照认，
+
+一样照赔。
+
+不认不赔，无论坐庄的是谁，这庄都坐到头了。
+
+而我们会要庄家赔的这注码，
+
+不会是什么“人民币国际化”或者“中欧协定”——此等杂物，我们可径自取之。
+
+我们要庄家赔的，
+
+恐怕就是你们。
+
+无论俄罗斯是输是赢。
+
+——推车——
+
+在灾年，中国的传统伦理，是仅仅允许灾民抱怨的。
+
+  
+
+平时饱受社会红利、政策扶持的富与贵者，在这个时候，是被默认要求要主动共体时艰、相忍为国的。
+
+  
+
+你低头不语，也就罢了，但你只要有一丝一毫的背道而驰，坦白讲，你明白过来的时候会恨不得穿越回去揪住自己的脖领子抡圆了给自己一顿大耳光。
+
+  
+
+这个时候背叛这个期待，以享利之身求灾民的待遇，是最招嫌憎、最生隐患的蠢行。
+
+  
+
+说轻点，看你年轻，算你不懂事，不知好歹。
+
+  
+
+说重点，如果觉得你是故意的，你这叫忘恩负义。
+
+  
+
+吃饭你朝前，扛事你朝后。没叫你推车，你居然嫌坐车坐得不爽？
 
 ——
