--- a/Anonymity/01 - 家族答集/慈善.md
+++ b/Anonymity/01 - 家族答集/慈善.md
@@ -9,22 +9,21 @@ Tags:     #方法实践SOP  #爱Caritas
 沙海拾金： [[慈善1.jpg]] [[慈善2.jpg]] [[慈善3.jpg]] [[慈善4.jpg]] [[慈善5.jpg]]
 
 
-
 我来说点离经叛道的话——做慈善是有常人往往不愿接受的戒律的——它的的确确只能是痛苦的延续，而不能是痛苦的解除。
 
-德兰修女的救助所是个很鲜活的例子——医疗所如果装上空调，提供三餐温饱，使用超出周围医院水准的（在攻击者眼里只是“最低安全水准的”）医疗措施，结果会是什么样？
+[德兰修女](https://www.zhihu.com/search?q=%E5%BE%B7%E5%85%B0%E4%BF%AE%E5%A5%B3&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A533635981%7D)的救助所是个很鲜活的例子——医疗所如果装上空调，提供三餐温饱，使用超出周围医院水准的（在攻击者眼里只是“最低安全水准的”）医疗措施，结果会是什么样？
 
-*结果会是强而有力者总是排在队伍前面。他们会装作穷人，占满全部床位以节约自己的电费，把领取的口粮、药物拿去转卖。会威胁甚至伤害企图揭穿他们的人，甚至本身可能就是“德兰修女企图降低救济标准”这类谣言的编造者。*
+结果会是强而有力者总是排在队伍前面。他们会装作穷人，占满全部床位以节约自己的电费，把领取的口粮、药物拿去转卖。会威胁甚至伤害企图揭穿他们的人，甚至本身可能就是“德兰修女企图降低救济标准”这类谣言的编造者。
 
 这才是人性的真相。
 
 **只有这救济的水平毫无侵占和转卖的价值，才能真正的让穷人安稳的享有。**
 
-这是个什么水平？如果是物资，就是“**在可以经济运输抵达的所有市场内，这些物资都属于滞销商品**”的水平；如果是服务，那么就是“**在辐射范围内，低于任何其他收费服务的水平**”的水平。在印度，这不多不少，正是德兰修女所提供的水平。以她的救济规模，如果她超出这个水平，会逼死大量的低端商业——她提供的可是免费的。救不见得救到谁，首先还创造大批失业者。
+这是个什么水平？如果是物资，就是“**在可以经济运输抵达的所有市场内，这些物资都属于滞销商品**”的水平；如果是服务，那么就是“**在辐射范围内，低于任何其他收费服务的水平**”的水平。在印度，这不多不少，正是德兰修女所提供的水平。以她的救济规模，如果她超出这个水平，会逼死大量的低端商业——她提供的可是免费的。救不见得救到谁，首先还创造大批[失业者](https://www.zhihu.com/search?q=%E5%A4%B1%E4%B8%9A%E8%80%85&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A533635981%7D)。
 
-这一点恐怕是出乎一般人意料的——*系统化的、规模化的救济、慈善，往往是一种很“残忍”的行为。*
+这一点恐怕是出乎一般人意料的——系统化的、规模化的救济、慈善，往往是一种很“残忍”的行为。
 
-第二，**人不可以借助救济提高生活水准**，无论这种“提高”多么微不足道。因为哪怕只要一点点的提高，都会削减人的主观努力的动力。因此救济常分为两种，一种是有入门门槛和相应代价的机会开放——譬如以工代赈或者有入学门槛的减免学费的教育；一种是仅仅提供最低等级维生支持。这种最低等级的维生支持，将必须做到从任何意义上都不能称其为一种享受，甚至要故意做到营养均衡足够但很难吃。
+第二，人不可以借助救济提高生活水准，无论这种“提高”多么微不足道。因为哪怕只要一点点的提高，都会削减人的主观努力的动力。因此救济常分为两种，一种是有入门门槛和相应代价的机会开放——譬如以工代赈或者有入学门槛的减免学费的教育；一种是仅仅提供最低等级维生支持。这种最低等级的[维生支持](https://www.zhihu.com/search?q=%E7%BB%B4%E7%94%9F%E6%94%AF%E6%8C%81&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A533635981%7D)，将必须做到从任何意义上都不能称其为一种享受，甚至要故意做到营养均衡足够但很难吃。
 
 **否则，“救济”可能成为穷人彻底堕落的地狱之门。**
 
@@ -48,25 +47,23 @@ Tags:     #方法实践SOP  #爱Caritas
 
 我发现很多人——尤其是中国人——有一种根深蒂固的观念，就是假如我捐了款，那么我应该有权干预善款使用。我可以对这钱应该怎么用、用在谁身上、用多少、用多快，有理所当然的评论权。
 
-*如何看待对江歌妈妈江秋莲敛财的质疑？*(http://www.zhihu.com/question/264223452)其实你没有。对在做事的慈善机构来说，如果你是这个想法，你的钱是要不起的——对小额捐赠者很容易理解，接受了五十块捐赠，迎来一位大爷。以这位大爷的巨婴程度，这五十块你是不可能花得ta满意的。ta事后多半会痛心疾首四处点火，尽全力打击你这辜负了ta一片好心的“伪善者”。这钱真不如不要。
+[如何看待对江歌妈妈江秋莲敛财的质疑？2705 关注 · 1196 回答问题](http://www.zhihu.com/question/264223452)
+
+其实你没有。对在做事的慈善机构来说，如果你是这个想法，你的钱是要不起的——对小额捐赠者很容易理解，接受了五十块捐赠，迎来一位大爷。以这位大爷的巨婴程度，这五十块你是不可能花得ta满意的。ta事后多半会痛心疾首四处点火，尽全力打击你这辜负了ta一片好心的“伪善者”。这钱真不如不要。
 
 对那些捐了万亿的大捐赠者呢？真有骨气的慈善机构在这个问题上也同样不该有丝毫的迎合。你捐的多，很好，谢谢。但你没有因此获得指挥我们做事方法的当然权利。如果你不接受，请你一开始就不要捐。这种事业完全不是为了迎合捐款者的需求，甚至也不是为了迎合接受慈善者的需求，而仅仅是为了行事者自己的某种追求。
 
 再加一条离经叛道的——
 
-**对于特蕾莎这样的慈善事业，这个帐毫无意义。**
+**对于[特蕾莎](https://www.zhihu.com/search?q=%E7%89%B9%E8%95%BE%E8%8E%8E&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A533635981%7D)这样的慈善事业，这个帐毫无意义。**
 
 这有两方面原因：
 
-#### 第一，凭证其实是无意义的，是可以用成本做出来的。
+第一，凭证其实是无意义的，是可以用成本做出来的。
 
 这笔钱拿去请当地人修路了。是要给你一堆领工资的回单作为凭证吗？还是要领钱的人都拿着钱拍张照作为证据？真要贪污的人，你以为这样就拦住他们了吗？本来就是领钱的人，想要贪污的人以不给钱为交换，要他们签一个更大金额的凭证有什么困难？你以为慈善事业涉及到的物资采购都可以拿到采购凭证？那说明你对基本实践完全无知。强推这个政策，对监督善款近乎没有意义，反而有利于假慈善机构——因为你会无意中抹去大量本来就在成本线上下挣扎的真慈善机构，他们没钱请这个会计，没钱买那台拍凭证的相机，也没处去买发票。你真正做到的，是替那些更擅长做这些的机构“扫除竞争对手”。**你在奖励造假者，难倒第一线的行动者**。
 
-
-
-#### 第二，也许常人难以相信，要做一点慈善事业，在一些最需要慈善帮助的混乱地区意味着什么。
-
-那些部落军阀们直接走进帐篷找你要保护费，这保护费能记在哪个科目下？你以为只有一方找你要？对不起，敌对双方都找你要。你不给，不是你做不做得下去的问题，是你人走不走得了的问题。你要记在哪一科目下？那些亲手造成苦难的人，甚至将自己爪牙下的人视为与慈善机构讨价还价的筹码。你要救他？给我一百美元我让你救一个。前提是你还要识相，不然老子明天还要涨价。这些费用，记在哪个名下？你以为这些军阀们拿了这些钱，只是去买可口可乐吗？当然是买枪买毒品去了。那你还要不要救这些病患老百姓呢？
+第二，也许常人难以相信，要做一点慈善事业，在一些最需要慈善帮助的混乱地区意味着什么。那些部落军阀们直接走进帐篷找你要保护费，这保护费能记在哪个科目下？你以为只有一方找你要？对不起，敌对双方都找你要。你不给，不是你做不做得下去的问题，是你人走不走得了的问题。你要记在哪一科目下？那些亲手造成苦难的人，甚至将自己爪牙下的人视为与慈善机构讨价还价的筹码。你要救他？给我一百美元我让你救一个。前提是你还要识相，不然老子明天还要涨价。这些费用，记在哪个名下？你以为这些军阀们拿了这些钱，只是去买可口可乐吗？当然是买枪买毒品去了。那你还要不要救这些病患老百姓呢？
 
 **你一定要有账才行，你就去捐那些有账的就是了，这是理所当然的个人自由和权利。但不要以为这样一定就更正义。**
 
@@ -76,18 +73,15 @@ Tags:     #方法实践SOP  #爱Caritas
 
 **正义没有你想的那么简单。**
 
-仅靠所谓的账目核算，把慈善行为简单的看成一种投资回报活动，把社会性收益也折算成回报入账，以为账面有盈利，慈善就做得不错，这样的思路其实是根本没有触及CARITAS核心本质的精妙的逃避行为。看似有道理，其实根本行不通。——一条人命多少钱？你用什么口径统计成本？那些入不了账的成本和支出你怎么解决？你的社会效益统计期打算算多少年？一个少年的教育值多少钱？一个部落的文化折多少？
+仅靠所谓的账目核算，把慈善行为简单的看成一种投资回报活动，把社会性收益也折算成回报入账，以为账面有盈利，慈善就做得不错，这样的思路其实是根本没有触及CARITAS核心本质的精妙的逃避行为。看似有道理，其实根本行不通。——一条人命多少钱？你用什么口径统计成本？那些入不了账的成本和支出你怎么解决？你的[社会效益](https://www.zhihu.com/search?q=%E7%A4%BE%E4%BC%9A%E6%95%88%E7%9B%8A&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A533635981%7D)统计期打算算多少年？一个少年的教育值多少钱？一个部落的文化折多少？
 
 如此靠不住的会计准则指导之下，你想要什么样的结果，我就有什么样的计算方法得出你想要的数字。
 
 这只是我要从善款里拿出多少成本来付给会计师的问题而已，改变不了事实分毫。
 
-所以作为捐款人，至少我从不纠结慈善机构的账目。你想要把这钱都拿回去买劳斯莱斯，我并不打算用给你添麻烦的办法去阻止。因为我知道那只会导致你把本来买劳斯莱斯剩下的钱里再拿一笔来请人去做账。我这样去要求，于真正的事情并无帮助。我只会从一开始考虑你是在基于什么样的想法要去做你这件事，我只会考虑在你身上赌你是真心的靠不靠谱。赌了，就完全信任。赌输了，愿赌服输。你真有对不起良知处，那些被贪污的钱是不足以补偿你在你自己和后代身上造成的恶劣传统的。那些房子车子享受，最终只会变成毒瘾，吸这毒的不光是你，还有你的子女们。那些被贪污的钱其实都变成地狱的办公经费了——又有何妨？
+所以作为捐款人，至少我从不纠结慈善机构的账目。你想要把这钱都拿回去买[劳斯莱斯](https://www.zhihu.com/search?q=%E5%8A%B3%E6%96%AF%E8%8E%B1%E6%96%AF&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A533635981%7D)，我并不打算用给你添麻烦的办法去阻止。因为我知道那只会导致你把本来买劳斯莱斯剩下的钱里再拿一笔来请人去做账。我这样去要求，于真正的事情并无帮助。我只会从一开始考虑你是在基于什么样的想法要去做你这件事，我只会考虑在你身上赌你是真心的靠不靠谱。赌了，就完全信任。赌输了，愿赌服输。你真有对不起良知处，那些被贪污的钱是不足以补偿你在你自己和后代身上造成的恶劣传统的。那些房子车子享受，最终只会变成毒瘾，吸这毒的不光是你，还有你的子女们。那些被贪污的钱其实都变成地狱的办公经费了——又有何妨？
 
-
-
-#### 第三，存在着更好的捐赠做法，可以免除审计的必要，那就是**买现货，不买期货**。
-----------------------------------------
+## 第三，存在着更好的捐赠做法，可以免除审计的必要，那就是**买现货，不买期货**。
 
 相信我一点出来，你们就应该懂了。
 
@@ -109,7 +103,7 @@ Tags:     #方法实践SOP  #爱Caritas
 
 我要你的账目干什么？你养大的孤儿在此，你种下的树林在此，我捐这点钱给你，我要你的账目干嘛？
 
-丛飞之死，与其说是他所资助的孤儿们之耻，不如说是这整个任他破产潦倒的社会之耻！孤儿们没回报他，我们在干什么？在等孤儿回报他？他抚养的是谁家的孤儿、不是他私有的孤儿，而是这个社会的孤儿。**整个社会都应该感谢他令这个社会共同的后代能有所养。**
+[丛飞](https://www.zhihu.com/search?q=%E4%B8%9B%E9%A3%9E&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A533635981%7D)之死，与其说是他所资助的孤儿们之耻，不如说是这整个任他破产潦倒的社会之耻！孤儿们没回报他，我们在干什么？在等孤儿回报他？他抚养的是谁家的孤儿、不是他私有的孤儿，而是这个社会的孤儿。**整个社会都应该感谢他令这个社会共同的后代能有所养。**
 
 我们在等什么？在等他的账吗？在等他写好透明公开的会计准则吗？
 
@@ -130,6 +124,8 @@ Tags:     #方法实践SOP  #爱Caritas
 换一个方向思考，事实上我们欠了慈善投入者的债，只是他自己承担了，宽免了我们。我们在事后偿还他，不过是尽力还债罢了。通过归还这债务，我们成了慈善者中的一员，站在这新成员的立场上，我们亦与ta一同宽免了世人无意间欠下的我们的债。
 
 **“免我们的债，如同我们免了人的债。”**
+
+---
 
 要理解德兰修女的心态，需要理解基督教慈善的伦理。
 
@@ -164,6 +160,5 @@ Tags:     #方法实践SOP  #爱Caritas
 至少，谈不上CARITAS。
 
 CARITAS PATIENS EST.
-
 
 
