--- a/Anonymity/04 - 社科答集/人才流失.md
+++ b/Anonymity/04 - 社科答集/人才流失.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *24/08/2021* 
-Links: [[世界史]] [[Anonymity/01 - 家族答集/大格局]] [[前途]] [[低端产业]] [[接受但不允许]] [[精英集团]] [[计划竞争]] [[超英赶美]] [[养老金耗尽]] [[职业规划]] [[新兴职业]] [[劝退]] [[躺平]] [[气泡膜]] [[高等教育]] [[全球化与失业]] [[中国的规模]] [[中国人的全球化]] [[全球化]]
+Links: [[世界史]] [[Anonymity/01 - 家族答集/大格局]] [[前途]] [[低端产业]] [[接受但不允许]] [[老人]] [[计划竞争]] [[超英赶美]] [[养老金耗尽]] [[职业规划]] [[新兴职业]] [[劝退]] [[躺平]] [[气泡膜]] [[高等教育]] [[全球化与失业]] [[中国的规模]] [[中国人的全球化]] [[全球化]]
 Tags:  
   
 这是因为中国在1990-2015之间的基本国策是先谋求在中低端基础制造业寻求压倒性优势。
