--- a/Anonymity/09 - 神学答集/祷告观.md
+++ b/Anonymity/09 - 神学答集/祷告观.md
@@ -6,8 +6,6 @@ Last update: *25/07/2021*
 Links: [[祈祷与祝福]] [[Sin]] [[厉害思维]] [[爱]] [[财富观]] [[可信标准]] [[学习的快乐]] [[聪明的笨功夫]] [[学习哲学 - 之一]] 
 Tags: #方法实践SOP #内在构建 
 
-借这个地方阐述一种祷告观。不代言官方立场，只是表达一种理解。
-
 基督教的祷告问题很复杂，大部分人看到的是美剧里面那种——小朋友跪在床前双手交握告诉上帝自己需要什么东西。
 
 但这是美国特殊的信仰状态，并非传统基督教的主流祈祷观的良好实践。
@@ -16,11 +14,7 @@ Tags: #方法实践SOP #内在构建
 
 先看原文：
 
-  
-
-“你们祷告的时候，不可像那假冒为善的人，爱站在会堂里和十字路口上祷告，故意叫人看见。我实在告诉你们，他们已经得了他们的赏赐。你祷告的时候，要进你的内屋，关上门，祷告你在暗中的父；你父在暗中察看，必然报答你。你们祷告，不可像外邦人，用许多重复话，他们以为话多了必蒙垂听。你们不可效法他们；因为你们没有祈求以先，你们所需用的，你们的父早已知道了。 
-
-(马太福音 6:5-8 和合本)
+> “你们祷告的时候，不可像那假冒为善的人，爱站在会堂里和十字路口上祷告，故意叫人看见。我实在告诉你们，他们已经得了他们的赏赐。你祷告的时候，要进你的内屋，关上门，祷告你在暗中的父；你父在暗中察看，必然报答你。你们祷告，不可像外邦人，用许多重复话，他们以为话多了必蒙垂听。你们不可效法他们；因为你们没有祈求以先，你们所需用的，你们的父早已知道了。 (马太福音 6:5-8 和合本)
 
 开宗明义，耶稣首先反对以自我标榜为实质用意的祷告形式。（关于这一点，似乎与圣公会和罗马教会等常见的“公祷”有直接矛盾，但这在后文另有一番解释，不在此赘述）
 
@@ -28,29 +22,29 @@ Tags: #方法实践SOP #内在构建
 
 祷告要进入暗室，对着“暗中”的上帝。仅仅这个“避众而行”的操守，本身就足以得到上帝的特殊报答。
 
-进而，耶稣反对“用许多重复的话”，直接否决了“话多了必蒙垂听”，而且指明“外邦人”作为反面教材。这可能是指咒语。
+进而，耶稣反对“用许多重复的话”，直接否决了“话多了必蒙垂听”，而且指明“外邦人”作为反面教材。这可能是指**咒语**。
 
-有一个很少被提到的事实——祷告其实从一诞生就有一个孪生兄弟，就是咒语巫术。咒语巫术和祷告，都是“以语言文字为媒介的人神沟通机制”。两者都是以向神魔提要求为基本形式。
+有一个很少被提到的事实——**祷告其实从一诞生就有一个孪生兄弟，就是咒语巫术。**咒语巫术和祷告，都是“以语言文字为媒介的人神沟通机制”。两者都是以向神魔提要求为基本形式。
 
-很显然，某些要求有被立刻满足的先例。一旦这种令人惊讶的现象发生，人们会本能的对导致这结果的祈祷内容加以特别的注意，并进而朴素的——这只是迷信的艺名——认定两者存在关联关系。如果初次应验过的祷告经过大规模的模仿重复，竟然又出现“应验”的案例，那么这两次内容完全相同、都得到回应的“祷告”之间的形式共性就会得到更加强烈的注视。譬如两次都在日出时、两次都穿了红衣、两次都是出于长男……一切的共同点都会被记录在案，被看作这“祷告”灵验的潜在必要条件。接下来会发生自然的“规模测试”。一切记录在案的“不灵验”，都会被总结为某个细节没有得到遵守或者某个细节并不必要，一切的“灵验”，又都为进一步的提炼精确范式提供了更多的数据依据。——你看，古人们本能的就知道什么叫“科研”，而“巫术”实则是一种“原始科研”的结果。这种现象，就是萨满教以及我们大量看到的融入佛教、道教的密法的原初根源。
+很显然，某些要求有被立刻满足的先例。一旦这种令人惊讶的现象发生，人们会本能的对导致这结果的祈祷内容加以特别的注意，并进而朴素的——这只是迷信的艺名——认定两者存在关联关系。如果初次应验过的祷告经过大规模的模仿重复，竟然又出现“应验”的案例，那么这两次内容完全相同、都得到回应的“祷告”之间的形式共性就会得到更加强烈的注视。譬如两次都在日出时、两次都穿了红衣、两次都是出于长男……一切的共同点都会被记录在案，被看作这“祷告”灵验的潜在必要条件。接下来会发生自然的“规模测试”。一切记录在案的“不灵验”，都会被总结为某个细节没有得到遵守或者某个细节并不必要，一切的“灵验”，又都为进一步的提炼精确范式提供了更多的数据依据。——你看，古人们本能的就知道什么叫“科研”，而“巫术”实则是一种“原始科研”的结果。这种现象，就是[萨满教](https://www.zhihu.com/search?q=%E8%90%A8%E6%BB%A1%E6%95%99&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A534542233%7D)以及我们大量看到的融入佛教、道教的密法的原初根源。
 
-咒术的另一种灵验的秘密，就是长时间的反复持续。——持续祈雨七七四十九天，不行就九九八十一天。在有季节性降雨的地区长达九九八十一天一直不下雨的几率是很小的，一旦下雨，就会为“固定持续重复”这个手段更添权威。
+**咒术的另一种灵验的秘密，就是长时间的反复持续。**——持续祈雨七七四十九天，不行就九九八十一天。在有季节性降雨的地区长达九九八十一天一直不下雨的几率是很小的，一旦下雨，就会为“固定持续重复”这个手段更添权威。
 
-这就是被否定的“外邦人”的“祈祷”。这句话实际上是指着咒术的本质，将基督教的祈祷与咒术做了势不两立的本质的区分。言下之意——基督门徒不应在任何意义上将基督教的祈祷视为一种“新门派的咒术”。犹太教是对近东巫术信仰的彻底反动，而基督教作为以“犹太教完全体”为自我期许的新信仰体系，只会在这方面更加坚决和彻底。耶稣的这一句简单的话，内里是深刻的对第一诫命（不拜偶像）的惊人阐发。在公元三十年前后，能在咒术崇拜的利益如此巨大的前提下为自己的理念做这样彻底的切分，这是极其了不起的。要知道只要顺水推舟，甚至只需要避而不谈，都足以大大的方便基督教团体的扩张。在当时主张“别以为说许多重复的话就必蒙垂听”是非常得罪人乃至招致仇恨的。
+这就是被否定的“外邦人”的“祈祷”。这句话实际上是指着咒术的本质，将基督教的祈祷与咒术做了势不两立的本质的区分。言下之意——基督门徒不应在任何意义上将基督教的祈祷视为一种“新门派的咒术”。犹太教是对近东巫术信仰的彻底反动，而基督教作为以“犹太教完全体”为自我期许的新信仰体系，只会在这方面更加坚决和彻底。耶稣的这一句简单的话，内里是深刻的对第一诫命（不拜偶像）的惊人阐发。**在公元三十年前后，能在咒术崇拜的利益如此巨大的前提下为自己的理念做这样彻底的切分，这是极其了不起的。**要知道只要顺水推舟，甚至只需要避而不谈，都足以大大的方便基督教团体的扩张。在当时主张“别以为说许多重复的话就必蒙垂听”是非常得罪人乃至招致仇恨的。
 
 接下去的话更加刻骨——“你们没有祈求以先，你们所需用的，你们的父早已知道了。”
 
-这话什么意思？这话事实上否决了“你们所求的”和“你们需用的”具有逻辑上的一致性。
+这话什么意思？这话事实上**否决了“你们所求的”和“你们需用的”具有逻辑上的一致性。**
 
-谈论基督教一定要注意一个前提，那就是基督教对人类本身的评价堪称是“无限低”的。因此，在这里，基督教神学会毫不困难的认识到人类根本就不知道自己该求什么。——人类所求的，并非他真正需要的，而且是一定如此。
+谈论基督教一定要注意一个前提，那就是基督教对人类本身的评价堪称是“无限低”的。因此，在这里，基督教神学会毫不困难的认识到**人类根本就不知道自己该求什么**。——人类所求的，并非他真正需要的，而且是**一定如此**。
 
-站在基督教的基本信条之上去看耶稣的这句话，耶稣实际上说的是“你们求一样东西，而你们的天父则会根据你们的所求，去给你另一样东西”——一个符合你的神性愿望，但却绝不见得符合你的预期的东西。
+站在基督教的基本信条之上去看耶稣的这句话，耶稣实际上说的是“你们求一样东西，而你们的天父则会根据你们的所求，去给你另一样东西”——**一个符合你的神性愿望，但却绝不见得符合你的预期的东西。**
 
 这听起来玄而又玄，但是其实很浅显。譬如年轻气盛的你向你的父亲要跑车，你无限富有的父亲却可能给你皮划艇。因为他看到你要的其实是“速度感”。速度感他会给你，但却并不见得给你跑车。
 
 他的裁决不会对你解释，也不容你上诉，看起来是事事与你“作对”，对你近乎残酷无情，但你若怀疑或者背弃他，自操主权，你必然自我毁灭。
 
-人可能有的最大的误判，就是以为自己是自己最大的盟友，却不知道恰恰是你自己才是你自己最大的敌人。
+**人可能有的最大的误判，就是以为自己是自己最大的盟友，却不知道恰恰是你自己才是你自己最大的敌人。**
 
 基督徒若要祷告，如果没有对上帝回应祷告的这一方式的基本认知，只会迅速的陷入“我这么顺着上帝的面子，弄得自己如此辛苦，牺牲众多，上帝却根本不听我的，忒也难伺候/无信用”的情绪。这些人从一开始就没意识到上帝的主权，在基督教的极端反偶像的意识形态基础上实践巫术范式的心理期待，当然会在巫术的语境里大骂基督教“不灵”，“骗人”。
 
@@ -60,23 +54,19 @@ Tags: #方法实践SOP #内在构建
 
 看清楚耶稣的声明：
 
-  
-
-“你们祈求，就给你们；寻找，就寻见；叩门，就给你们开门。因为凡祈求的，就得着；寻找的，就寻见；叩门的，就给他开门。你们中间谁有儿子求饼，反给他石头呢？求鱼，反给他蛇呢？你们虽然不好，尚且知道拿好东西给儿女，何况你们在天上的父，岂不更把好东西给求他的人吗？ 
-
-(马太福音 7:7-11 和合本)
+> “你们祈求，就给你们；寻找，就寻见；叩门，就给你们开门。因为凡祈求的，就得着；寻找的，就寻见；叩门的，就给他开门。你们中间谁有儿子求饼，反给他石头呢？求鱼，反给他蛇呢？你们虽然不好，尚且知道拿好东西给儿女，何况你们在天上的父，岂不更把好东西给求他的人吗？ (马太福音 7:7-11 和合本)
 
 你所祈求的，上帝已经给你了。把“赐予东西与你的祈求无关”这个可能性消灭掉了，那么剩下的就只能是对“赐予的东西与祈求的东西何以一致”的求索了。赐予你的东西，必然正是你所求的东西的一个经神整理版。在神眼里，作为有志愿的基督徒，你必定首先有一个最基本的、最首要的祈求——祈求永生和最终的幸福。默认你的一切其他祈求都必然在本意上不与这一根本祈求违背。但因为你个人的智慧有限，你将无法理解你具体的其他祈求与你的根本祈求之间的矛盾和关系，因此上帝在听了你的具体祈求之后，会酌情为你考虑，给你一个与你的最终祈求一致的实现。
 
-换句话来说，事实上不论你怎么求，上帝给你的回应都是赐你通向永生永福的道路。祂赐予的其实一直就是同一个东西，只是因你的具体祈求，祂为你调整了路线，尽可能的包括了你现在具体祈求的东西。
+**换句话来说，事实上不论你怎么求，上帝给你的回应都是赐你通向永生永福的道路。祂赐予的其实一直就是同一个东西，只是因你的具体祈求，祂为你调整了路线，尽可能的包括了你现在具体祈求的东西。**
 
-逻辑的看，因为你并不知道原来的计划，因此这种调整对你来说如同不存在——你怎么知道上帝原来安排的不正是这样呢？看到了吗？决定论和自由意志论其实在人神之间存在单向信息遮蔽的前提下，在逻辑上并无本质分别。
+逻辑的看，因为你并不知道原来的计划，因此这种调整对你来说如同不存在——你怎么知道上帝原来安排的不正是这样呢？看到了吗？[决定论](https://www.zhihu.com/search?q=%E5%86%B3%E5%AE%9A%E8%AE%BA&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A534542233%7D)和自由意志论其实在人神之间存在单向信息遮蔽的前提下，在逻辑上并无本质分别。
 
 基督徒的祈祷，得到的是两个结果——“上帝对祈求之物洞察后给出的满足”和“一道思考题”。你求香蕉，得到的却可能是一把铁锹和一个巨大的问号。“给我这把铁锹，到底是告诉我香蕉这个提案被否决了，还是说让我去种一棵香蕉会获得丰收？”这答案是左还是右，那就是基督教神学里最困难的问题之一了。
 
 一个成熟的基督徒，在祷告之后获得的是这样一个结果——如果我所求的是会成就永生的，那么接下去无论发生的是什么，都是超出我的期望的大满足的开端（注意这个“超出期望”本身就是服从上帝绝对主权所必备的自觉），如果我所求的是与永生永福相违背的，那么下面发生的一定是上帝经过仔细考虑赐予我的痛苦最小的教训。而无论是这超出期望的大满足、还是这上帝从教训里给我的指引，对我都是我所求的东西（甚至如果获得的是后者更加赚到，因为作为基督徒得知上帝的心愿是至高无上的、无法用任何世俗利益交换的收获）——永生永福本身。
 
-是基于这样一种根本没有坏结局的逻辑结构，基督徒的祷告成为了绝对的信心来源，也是绝对的精进之道。每一次祷告，都是在重温这个人神关系，自我提醒这个人神关系的存在。祷告的中心，并非你具体求了什么，而是不断的再次刷新你心里的信念。上帝掌管一切，而祂要通过你的命运引导你获得永生永福，祂有什么事办不到的呢？人的责任只是要稳稳的抓紧过山车的保险杠，不要半路跳车。眼前的困难和挑战的输赢都不重要。输，会改变我，但这改变必然会铺平后来的道路，赢，也会改变我，也同样指向同一终点。心里有了这样的笃定，那么就有了一切做该做的事情的定力和勇气，而不再因为难以控制“输掉”的风险，徒劳的思考如何彻底的控制世界的一切因素，妄图令其服从于自己获胜的执着。很多人的祈祷之所以无力，是因为为了要“赢”，他们唯一的指望是要天地围着自己变色。
+是基于这样一种**根本没有坏结局的逻辑结构**，基督徒的祷告成为了**绝对的信心来源**，也是绝对的精进之道。每一次祷告，都是在重温这个人神关系，自我提醒这个人神关系的存在。祷告的中心，并非你具体求了什么，而是不断的再次刷新你心里的信念。上帝掌管一切，而祂要通过你的命运引导你获得永生永福，祂有什么事办不到的呢？人的责任只是要稳稳的抓紧过山车的保险杠，不要半路跳车。眼前的困难和挑战的输赢都不重要。输，会改变我，但这改变必然会铺平后来的道路，赢，也会改变我，也同样指向同一终点。心里有了这样的笃定，那么就有了一切做该做的事情的定力和勇气，而不再因为难以控制“输掉”的风险，徒劳的思考如何彻底的控制世界的一切因素，妄图令其服从于自己获胜的执着。很多人的祈祷之所以无力，是因为为了要“赢”，他们唯一的指望是要天地围着自己变色。
 
 他们自己已经实在想不出办法，唯一的指望是靠全知全能的上帝帮忙，而在内心深处，他们却又隐隐的知道上帝不是这样一种由得你来驱使的鬼神——哪怕你的“祭礼”再“丰盛”，“祭仪”再“华丽”，这也只是对非基督教的其他鬼神才存在的东西，对上帝是不适用的。于是他们的“祷告”，只会给自己带来进一步的绝望。
 
@@ -88,37 +78,9 @@ Tags: #方法实践SOP #内在构建
 
 接下去，耶稣直接作出了祷告的示范。这也是对基督教至关重要的“主祷文”。
 
-  
+> 所以，你们祷告要这样说： 我们在天上的父： 愿人都尊你的名为圣。 愿你的国降临； 愿你的旨意行在地上， 如同行在天上。 我们日用的饮食，今日赐给我们。 免我们的债， 如同我们免了人的债。 不叫我们遇见试探； 救我们脱离凶恶（或译：脱离恶者）。 因为国度、权柄、荣耀，全是你的， 直到永远。阿们（有古卷没有因为…阿们等字）！ (马太福音 6:9-15 和合本)
 
-所以，你们祷告要这样说： 
-
-我们在天上的父： 
-
-愿人都尊你的名为圣。 
-
-愿你的国降临； 
-
-愿你的旨意行在地上， 
-
-如同行在天上。 
-
-我们日用的饮食，今日赐给我们。 
-
-免我们的债， 
-
-如同我们免了人的债。 
-
-不叫我们遇见试探； 
-
-救我们脱离凶恶（或译：脱离恶者）。 
-
-因为国度、权柄、荣耀，全是你的， 
-
-直到永远。阿们（有古卷没有因为…阿们等字）！ 
-
-(马太福音 6:9-15 和合本)
-
-在这一祈祷观的视角之下再来看主祷文，就看得到主祷文的实际结构。
+在这一祈祷观的视角之下再来看[主祷文](https://www.zhihu.com/search?q=%E4%B8%BB%E7%A5%B7%E6%96%87&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A534542233%7D)，就看得到主祷文的实际结构。
 
 “愿人都尊你的名为圣。愿你的国降临；愿你的旨意行在地上，如同行在天上。”并不只是对上帝的赞美，而是祈愿本身的一部分，是在重申基督徒最基本的愿望。实际上这暗含了“一切其他祈求都愿意任由上帝处置以与这最高祈求一致化”的开放心态。这两句放在最前，也就直接为整个祷告定下了基调。是在这基调之上，才有“我们日用的饮食，今日赐给我们。免我们的债，如同我们免了人的债。不叫我们遇见试探；救我们脱离凶恶”这样一些具体祈求。然后是“因为国度、权柄、荣耀，全是你的，直到永远”——信心重申。
 
@@ -146,7 +108,7 @@ Tags: #方法实践SOP #内在构建
 
 ——“因为我玩得开心就会好好学习”
 
-——“这么说，要你好好学习还要先把你哄高兴了？”pia！！
+——“这么说，要你好好学习还要先把你哄高兴了？” pia！！
 
 ——“因为人家都有”
 
@@ -196,13 +158,11 @@ Tags: #方法实践SOP #内在构建
 
 每日所需的饮食，只求今日眼前这一份，这同时就是与试探神成性的其他异教决裂的宣告。也是对你的信的诚实性的告白和对上帝主权的认信的告白。一切的个人所需，都有这示范所指明的同样的限制。
 
-照着最低的限度祈求个人所需，是否获赐并不是重要的，重要的是再次向上帝表白了自己的信，并相信这信是被上帝喜欢的，相信上帝与自己有了更深一些的关系所带来的喜乐，才是这祷告永不会缺乏的赏赐。至于是否真得到饮食的赏赐，已经是额外的花红了。即便不得，也不会折损由那份对亲近的笃定而带来的喜悦。这样的祷告，根本没有“失望”“失败”可言。
+**照着最低的限度祈求个人所需，是否获赐并不是重要的，重要的是再次向上帝表白了自己的信，并相信这信是被上帝喜欢的，相信上帝与自己有了更深一些的关系所带来的喜乐，才是这祷告永不会缺乏的赏赐。**至于是否真得到饮食的赏赐，已经是额外的花红了。即便不得，也不会折损由那份对亲近的笃定而带来的喜悦。这样的祷告，根本没有“失望”“失败”可言。
 
-而这样一种温柔谦卑、毫无执念的祈求法，是作为一个爱人最完美的练习之一。你用这个姿态去想任何人祈求，虽然你是求获利者，被求者也必然感受到强烈的爱。因为你与其他恳求者不同，你不会因为被拒绝就切齿记恨、就用失望、用抱怨、乃至用报复去惩罚拒绝了你恳求的人。这已是极大的爱。要知道常人为了畏惧他人在恳求背后隐藏的威胁，花了多大的力气假装自己无能为力！
+**而这样一种温柔谦卑、毫无执念的祈求法，是作为一个爱人最完美的练习之一。**你用这个姿态去想任何人祈求，虽然你是求获利者，被求者也必然感受到强烈的爱。因为你与其他恳求者不同，你不会因为被拒绝就切齿记恨、就用失望、用抱怨、乃至用报复去惩罚拒绝了你恳求的人。这已是极大的爱。要知道常人为了畏惧他人在恳求背后隐藏的威胁，花了多大的力气假装自己无能为力！
 
-  
-
-在这祈求中养成的这份温柔自限自觉，才是耶稣透过这祈祷的示范而赐予你的人最大的福利。你爱世人的习惯，将为你带来世人的爱。你所求的每日的饮食，只要你确切的按着这领悟而求，其实已经永永远远的一次赐给你了。上帝是按照对这样的祈求无法无动于衷的标准来设计人类的，全人类中的健康者，都是为了可以灵敏的感应到这种祈求的人力量，并不能内心淡然的拒绝这样的祈求而预备的。
+**在这祈求中养成的这份温柔自限自觉，才是耶稣透过这祈祷的示范而赐予你的人最大的福利。你爱世人的习惯，将为你带来世人的爱。**你所求的每日的饮食，只要你确切的按着这领悟而求，其实已经永永远远的一次赐给你了。上帝是按照对这样的祈求无法无动于衷的标准来设计人类的，全人类中的健康者，都是为了可以灵敏的感应到这种祈求的人力量，并不能内心淡然的拒绝这样的祈求而预备的。
 
 那些面对这样的祈求而内心刚硬没有任何帮助冲动的人，自有严重的孤独和放逐在等待着他们——上帝也是按照这个目的设计了人类社会的基本构造。这一切早就铺陈好了，然后才有道成肉身来交给你启动这些机制的密码。
 
@@ -210,9 +170,9 @@ Tags: #方法实践SOP #内在构建
 
 即使事情没有任何情节上的趋势改变，你也要比全然没有这层心里有防御结构的人多出极大的一份心理稳定性。仅仅这份镇静，就足以胜过没有的人靠着近乎疯狂的自我打气、以接近认知扭曲为代价强挤出来的“自信”。后者根本经不起后续任何的负面发展的挑战，而你却根本并不受进一步逆境的威胁。
 
-多年的祷告，并不是在求不受逆境，而是在习得能接受一切逆境而并不失去平安喜乐和理智判断的强韧。
+**多年的祷告，并不是在求不受逆境，而是在习得能接受一切逆境而并不失去平安喜乐和理智判断的强韧。**
 
-这，才是帕斯卡的赌注。才是不信者的风险。
+**这，才是帕斯卡的赌注。才是不信者的风险。**
 
 但是我再提醒一遍——这些并不是上帝肯定存在的铁证。你显然不能因为一个东西如果存在就会对你特别好就肯定一个东西肯定存在。逻辑根本不支持这种论证法。
 
@@ -228,25 +188,19 @@ Tags: #方法实践SOP #内在构建
 
 一人花了一百万造了一座桥，在“善有善报”的前提下，综合所有的名声、正式赏赐、非正式优待，这人得到的长久回报应该要超过最低预期利率。换句话来说，在建立了有善必赏法则的社会里，实际上是对行善者开放了进行社会投资的机会。理论上统治者和收益的社会承诺了你这些投资将会得到不低于最低利率的收益。这才称得上善有善报。要维持这个承诺有效，以至于起到有效激励普遍积极行善的目的，必须首先达成这些善行的互相叠加能有效的达成一加一大于二的溢价效应。这样才能保证行善者在数学上有实现“善有善报”的最基本的可能。但这其中有两个障碍——第一，政府对有效实现溢价并进行转移支付的行政成本很高。我们假设一个捐资修桥的和一个捐资办学的各出了一百万，两个善行的确发生了加成，以至于产生了额外的社会效益，所有的受益者加起来一共获得了四百万总收益预期。那么要这个系统有效运转，需要首先没有什么意外去影响这四百万真实的实现，这需要社会运转非常良好；第二，需要社会反馈机制能让所有的受益者主动的交出自己的所得的一部分去回馈最初的行善者；第三，需要统治机构将自己通过税收、官卖、国际竞争中因这善举获得的收益增加中抽出足够的份额来补充社会回馈尚未补足的部分。
 
-这也许在数学上能计算出可行性来。但是因为社会惊人的低效，这个机制极少能保证真的有效实施。第一，在很大一部分情况下，预期的四百万因为各种原因干扰，根本就没有实现——桥被老百姓拆了拿回家盖房子了。小孩子毕业之后几乎没有对当初捐资建校者没有过任何联系。于是保障这个机制有效的几乎全部的重担，都落在了圣明天子和包青天们的身上。而这四百万预期收益，即便完全发生，税率设为75%这种惨无人道的高税率，政府也只能拿回三百万。这三百万，要扣除征收成本、行政成本、对冲各种风险（比如改朝换代风险）。你们可以评估一下，数学上能依靠这个系统真的实现挤出两百一十万来还给当初两位行善者的可能性。“善必有善报”，对于宣扬可以用这个机制来兑现的社会来说，实际上意味着多么高的要求。真的是要求众正临朝、圣天子在位，天下为公，而且至上而下毫无私心杂念，为实现三代之治，不惜两袖清风。
+这也许在数学上能计算出可行性来。但是因为社会惊人的低效，这个机制极少能保证真的有效实施。第一，在很大一部分情况下，预期的四百万因为各种原因干扰，根本就没有实现——桥被老百姓拆了拿回家盖房子了。小孩子毕业之后几乎没有对当初捐资建校者没有过任何联系。于是保障这个机制有效的几乎全部的重担，都落在了[圣明天子](https://www.zhihu.com/search?q=%E5%9C%A3%E6%98%8E%E5%A4%A9%E5%AD%90&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A534542233%7D)和包青天们的身上。而这四百万预期收益，即便完全发生，税率设为75%这种惨无人道的高税率，政府也只能拿回三百万。这三百万，要扣除征收成本、行政成本、对冲各种风险（比如改朝换代风险）。你们可以评估一下，数学上能依靠这个系统真的实现挤出两百一十万来还给当初两位行善者的可能性。“善必有善报”，对于宣扬可以用这个机制来兑现的社会来说，实际上意味着多么高的要求。真的是要求众正临朝、圣天子在位，天下为公，而且至上而下毫无私心杂念，为实现三代之治，不惜两袖清风。
 
-现实中朝廷挤不出这两百一十万。朝廷只能要么赖账，采用以点带面迁木立信的方式，用中彩票式的个别重奖来代替真实的普遍回报。我有三百个一百万的支付义务，我真支付会破产，那么我挑一两个典型，每人支付两百万，然后再花两百万做重大宣传。去创造一种“善有善报的典型案例”。这很像欠了很多供应商钱，于是反而大张旗鼓的向其中很少的几个单独支付，以安抚其他供应商稍安勿躁。并不要紧，因为拖的足够久，要么供应商自己会垮，要么我自己垮了。不管发生哪一个，欠帐就勾销了。失信的总是前朝，前朝垮了嘛。新朝新气象，社会契约从头计算，统治信用再从一百分开始扣除。
+**现实中朝廷挤不出这两百一十万。**朝廷只能要么赖账，采用以点带面迁木立信的方式，用中彩票式的个别重奖来代替真实的普遍回报。我有三百个一百万的支付义务，我真支付会破产，那么我挑一两个典型，每人支付两百万，然后再花两百万做重大宣传。去创造一种“善有善报的典型案例”。这很像欠了很多供应商钱，于是反而大张旗鼓的向其中很少的几个单独支付，以安抚其他供应商稍安勿躁。并不要紧，因为拖的足够久，要么供应商自己会垮，要么我自己垮了。不管发生哪一个，欠帐就勾销了。失信的总是前朝，前朝垮了嘛。新朝新气象，社会契约从头计算，统治信用再从一百分开始扣除。
 
-不主张善必有善报，将不能引发足够的社会投资，社会会因为公共产品过于匮乏而失去存在的根基。而主张由社会自身或社会的管理机构来承担兑付责任，因为社会机构必然的低效，将只能通过周期性的信用透支、触发以灭亡为形式的客观破产保护机制。靠着这一代代的借贷和破产，维持着一代代的社会投资。
+**不主张善必有善报，将不能引发足够的社会投资，社会会因为公共产品过于匮乏而失去存在的根基。而主张由社会自身或社会的管理机构来承担兑付责任，因为社会机构必然的低效，将只能通过周期性的信用透支、触发以灭亡为形式的**[**客观破产保护机制**](https://www.zhihu.com/search?q=%E5%AE%A2%E8%A7%82%E7%A0%B4%E4%BA%A7%E4%BF%9D%E6%8A%A4%E6%9C%BA%E5%88%B6&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A534542233%7D)**。靠着这一代代的借贷和破产，维持着一代代的社会投资。**
 
 诚然，欠款太多的朝廷为了延迟破产，会采用各种变通手段。譬如依靠建立免税制度、乡贤制度、包税制度，以征税权和基层行政管理权作为偿付手段。潜台词实际上是“你自己去向那些人征收你的善报”。但这并没有改变数学关系，仍然是饮鸩止渴。
 
-这，其实是人类社会治乱循环的一般根源。
+**这，其实是人类社会治乱循环的一般根源。**
 
-但是耶稣通过基督教义引入了一个划时代的新理念：
+但是耶稣通过[基督教义](https://www.zhihu.com/search?q=%E5%9F%BA%E7%9D%A3%E6%95%99%E4%B9%89&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A534542233%7D)引入了一个划时代的新理念：
 
-  
-
-那时，彼得进前来，对耶稣说：“主啊，我弟兄得罪我，我当饶恕他几次呢？到七次可以吗？”耶稣说：“我对你说，不是到七次，乃是到七十个七次。天国好像一个王要和他仆人算账。才算的时候，有人带了一个欠一千万银子的来。因为他没有什么偿还之物，主人吩咐把他和他妻子儿女，并一切所有的都卖了偿还。那仆人就俯伏拜他，说：‘主啊，宽容我，将来我都要还清。’那仆人的主人就动了慈心，把他释放了，并且免了他的债。 
-
-“那仆人出来，遇见他的一个同伴欠他十两银子，便揪着他，掐住他的喉咙，说：‘你把所欠的还我！’他的同伴就俯伏央求他，说：‘宽容我吧，将来我必还清。’他不肯，竟去把他下在监里，等他还了所欠的债。众同伴看见他所做的事就甚忧愁，去把这事都告诉了主人。于是主人叫了他来，对他说：‘你这恶奴才！你央求我，我就把你所欠的都免了，你不应当怜恤你的同伴，像我怜恤你吗？’主人就大怒，把他交给掌刑的，等他还清了所欠的债。你们各人若不从心里饶恕你的弟兄，我天父也要这样待你们了。” 
-
-(马太福音 18:21-35 和合本)
+> 那时，彼得进前来，对耶稣说：“主啊，我弟兄得罪我，我当饶恕他几次呢？到七次可以吗？”耶稣说：“我对你说，不是到七次，乃是到七十个七次。天国好像一个王要和他仆人算账。才算的时候，有人带了一个欠一千万银子的来。因为他没有什么偿还之物，主人吩咐把他和他妻子儿女，并一切所有的都卖了偿还。那仆人就俯伏拜他，说：‘主啊，宽容我，将来我都要还清。’那仆人的主人就动了慈心，把他释放了，并且免了他的债。 “那仆人出来，遇见他的一个同伴欠他十两银子，便揪着他，掐住他的喉咙，说：‘你把所欠的还我！’他的同伴就俯伏央求他，说：‘宽容我吧，将来我必还清。’他不肯，竟去把他下在监里，等他还了所欠的债。众同伴看见他所做的事就甚忧愁，去把这事都告诉了主人。于是主人叫了他来，对他说：‘你这恶奴才！你央求我，我就把你所欠的都免了，你不应当怜恤你的同伴，像我怜恤你吗？’主人就大怒，把他交给掌刑的，等他还清了所欠的债。你们各人若不从心里饶恕你的弟兄，我天父也要这样待你们了。” (马太福音 18:21-35 和合本)
 
 看完这个故事，再来看这句祷词：“免我们的债，如同我们免了人的债”。你就能看到一条新路。
 
@@ -260,11 +214,11 @@ Step4：神用赐你乐观的心理机制和天堂买单。你行了善，你不
 
 有什么比不焦虑珍贵？有什么比有不可磨灭的希望珍贵？你不信问问真能解决问题的心理医生和职业经理人有多贵。从人类有历史开始，这种服务都是要以你身家的百分比来计算的。没有这些，你会绝望自杀，万贯家财于你无效。你就是赢得了全世界，若失了生命，又有何益呢？
 
-神握着你生命质量的关键，用来买了一切他人欠你的债务。神的信用在这个机制里生生不息，永无匮乏。这个机制一旦建立，将能为社会有效的供应无穷尽的免费用、也不损害人际信用或社会契约信用的公共产品。即使提供这产品的行善者完全没有拿到一分银子，他也并未亏本。——前提是他信。
+**神握着你生命质量的关键，用来买了一切他人欠你的债务。神的信用在这个机制里生生不息，永无匮乏。这个机制一旦建立，将能为社会有效的供应无穷尽的免费用、也不损害人际信用或社会契约信用的公共产品。即使提供这产品的行善者完全没有拿到一分银子，他也并未亏本。**——前提是他信。
 
 当人在如此祷告时，他信。
 
-这就是“主内平安”和“神爱世人”的现实逻辑，也是何以亚伯拉罕诸教能有效的建立高度信用社会和长期负担公共产品支出其政府和君主却并不容易破产的“秘密”。说穿了没有任何神秘性，完全用不着六翼天使。
+**这就是“主内平安”和“神爱世人”的现实逻辑，也是何以亚伯拉罕诸教能有效的建立高度信用社会和长期负担公共产品支出其政府和君主却并不容易破产的“秘密”。**说穿了没有任何神秘性，完全用不着[六翼天使](https://www.zhihu.com/search?q=%E5%85%AD%E7%BF%BC%E5%A4%A9%E4%BD%BF&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A534542233%7D)。
 
 这就是奥卡姆剃刀切不动的那个“必要性”。也是帕斯卡赢走的另一堆赌注。
 
@@ -274,13 +228,13 @@ Step4：神用赐你乐观的心理机制和天堂买单。你行了善，你不
 
 试探是什么呢？是能检验信仰真诚性的事件。
 
-最著名的，就是约伯记里约伯的遭遇。的确是惨烈而且凶恶。
+最著名的，就是[约伯记](https://www.zhihu.com/search?q=%E7%BA%A6%E4%BC%AF%E8%AE%B0&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A534542233%7D)里约伯的遭遇。的确是惨烈而且凶恶。
 
 但这不是求免试探的根本。
 
-求“免试探”的潜台词，是“自知信得不足，受不起试探”。
+求“免试探”的潜台词，是“**自知信得不足，受不起试探”。**
 
-真实的信，是心知肚明自己信得不足的信，是深恐自己受不住试探的信。人最大、最健康的信，也只是受不住试探的信。再往上一步，演变成“自信肯定受得住试探的信”，变成“来吧只管试探我”的信，不是更虔诚了、更美好了，而是变得更丑恶了，变成自立偶像了。
+**真实的信，是心知肚明自己信得不足的信，是深恐自己受不住试探的信。**人最大、最健康的信，也只是受不住试探的信。再往上一步，演变成“自信肯定受得住试探的信”，变成“来吧只管试探我”的信，不是更虔诚了、更美好了，而是变得更丑恶了，变成自立偶像了。
 
 世界上唯一受得住试探的，只有神的信。无论人类如何令神失望，神始终相信人值得拯救。
 
@@ -298,23 +252,19 @@ Step4：神用赐你乐观的心理机制和天堂买单。你行了善，你不
 
 凶恶是什么？是一切糟糕的际遇吗？
 
-并非如此，凶恶是指会威胁到永生永福的际遇。
+并非如此，**凶恶是指会威胁到永生永福的际遇**。
 
 把凶恶与试探并列，内力是再次表白“请帮助我在一切可能让我的信崩塌的际遇中，拯救我的信”。只要拯救了我的信，则我的痛苦都终将消弭，险恶也不再构成威胁了。
 
 为什么不是在求干脆不要遭遇这些险恶？
 
-因为耶稣在前文里已经明确的说过基督徒的使命就是为人牺牲，与人替罪，承受损害而终止报复，给予饶恕。基督教的使命就是成为世界最好的受害者——仇恨沿着冤冤相报的铁链条最终传到一个真基督徒时，会因这基督徒的原谅而终止。只有这样，才能消除整个世界不断叠加累积的震荡，保全举世尚未悔改醒悟的罪人。如果基督徒自己祈求一开始就不陷入凶恶，则形如背叛自己因认信而承担的使命。
+因为耶稣在前文里已经明确的说过基督徒的使命就是为人牺牲，与人替罪，承受损害而终止报复，给予饶恕。基督教的使命就是成为世界最好的受害者——仇恨沿着冤冤相报的铁链条最终传到一个真基督徒时，会因这基督徒的原谅而终止。只有这样，才能消除整个世界不断叠加累积的震荡，保全举世尚未悔改醒悟的罪人。**如果基督徒自己祈求一开始就不陷入凶恶，则形如背叛自己因认信而承担的使命。**
 
-因此，基督徒只能求在凶恶中受保守，而不能求不遇到任何凶恶。
+**因此，基督徒只能求在凶恶中受保守，而不能求不遇到任何凶恶。**
 
 是为第六段。
 
-  
-
-  
-
-  
+——————————
 
 其实，Bible的神性并不在于犹太人有多崇拜它、也不在于基督徒们有多崇拜它。他们人数再多，也仍然是凡人，是没有资格为圣经作保的。因为人类的推崇而视某物为圣，其实从一开始就是对信仰本身的背叛了。
 
@@ -324,7 +274,7 @@ Step4：神用赐你乐观的心理机制和天堂买单。你行了善，你不
 
 第二，就是圣经里的神迹——一些超越时代背景，超越现实逻辑，内在结构之微妙、真理性之强超乎所有时代人想象的阐述本身。
 
-这些话其实超越了故事的背景，犹如阿基米德洗澡时跳出来的浮力定律一样。浮力定律的神性不是来自于洗澡，也不是来自于阿基米德的信徒的推崇。它的意义也远超了阿基米德以及他的学生的想象。它不是谁的聪明才智的结果——事实上，没有谁应该宣称他自己拥有自己灵感的最终所有权，因为人只是神晓谕万民的传声筒、扬声器。
+这些话其实超越了故事的背景，犹如阿基米德洗澡时跳出来的[浮力定律](https://www.zhihu.com/search?q=%E6%B5%AE%E5%8A%9B%E5%AE%9A%E5%BE%8B&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A534542233%7D)一样。浮力定律的神性不是来自于洗澡，也不是来自于阿基米德的信徒的推崇。它的意义也远超了阿基米德以及他的学生的想象。它不是谁的聪明才智的结果——事实上，没有谁应该宣称他自己拥有自己灵感的最终所有权，因为人只是神晓谕万民的传声筒、扬声器。
 
 主祷文本身是神迹。明白了吗？
 
@@ -334,7 +284,7 @@ Step4：神用赐你乐观的心理机制和天堂买单。你行了善，你不
 
 首先，公祷依赖公祷书。
 
-公祷书记载了大量的“标准祷告”，是教会教牧实践中的核心工具之一。如同我们前面所分析的，事实上主祷文有着深不可测的合理性深度，这在一方面给了基督徒以最好的示范，另一方面却又提出了一个极高的要求。
+[公祷书](https://www.zhihu.com/search?q=%E5%85%AC%E7%A5%B7%E4%B9%A6&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A534542233%7D)记载了大量的“标准祷告”，是教会教牧实践中的核心工具之一。如同我们前面所分析的，事实上主祷文有着深不可测的合理性深度，这在一方面给了基督徒以最好的示范，另一方面却又提出了一个极高的要求。
 
 若是这样才能算正确的祷告，那么若是要进行别的祷告该要如何说呢？我怎么知道哪些该求、哪些不该求、要怎样求呢？
 
@@ -344,15 +294,15 @@ Step4：神用赐你乐观的心理机制和天堂买单。你行了善，你不
 
 但不要误认为教会所选择的，就是完美无缺足以和耶稣比肩的。事实并不是这样。恰恰相反，教会是由人类组成，在神学上可以毫无疑义的认定这些决定一定有人类错误判断的干扰，以至于必有残缺。换句话说——教会凭着神权作出的决定，在客观上仍然不可避免是错误的。
 
-但是——请注意这个至关重要的但是——大公教会凭着自己最大的诚意和智慧所作出的仍然含有错误的选择，因为有神的授权，只能被认为是一种正确的错误。
+但是——请注意这个至关重要的但是——大公教会凭着自己最大的诚意和智慧所作出的仍然含有错误的选择，因为有神的授权，只能被认为是一种**正确的错误。**
 
-是在特定时代、特定水平、特定环境下，被神安排，被神赐予，被神最终祝福的错误。
+**是在特定时代、特定水平、特定环境下，被神安排，被神赐予，被神最终祝福的错误。**
 
-教会不是一贯正确，实际上，教会一贯错误。也只能是一贯错误。
+**教会不是一贯正确，实际上，教会一贯错误。也只能是一贯错误。**
 
-教会的“一贯正确”乃至于“教宗无谬论”，不是指这些决定放诸千秋万世里决不会发现其不合理，而是在最后最圆满的结局到来之时，会发现它的每一个决定都最终是圆满结局的不可分割的一个前置步骤。
+**教会的“一贯正确”乃至于“教宗无谬论”，不是指这些决定放诸千秋万世里决不会发现其不合理，而是在最后最圆满的结局到来之时，会发现它的每一个决定都最终是圆满结局的不可分割的一个前置步骤。**
 
-若不在这之前如此犯下这些那些“错误”，人类将不会走上这样一条通向最终圆满和最终永福的道路。这道路的一切曲折，都被信心中圆满的结局本身成全为了一种正确。
+**若不在这之前如此犯下这些那些“错误”，人类将不会走上这样一条通向最终圆满和最终永福的道路。这道路的一切曲折，都被信心中圆满的结局本身成全为了一种正确。**
 
 否则一切神学探索、一切信仰的决疑，在原理和逻辑上就是不可能的。一神论信仰自身会遇上不可解的逻辑困难——因为必须认信人的绝对缺陷和偏见，而又绝不能说教会中的任何人或人的群体可以超脱人的缺陷，他们无法进行任何信仰上的追求。凡追求，便是需求的追求。人注定只能沿着错误的道路寻求真理，如果不允许错误，就等于弃绝了真理。而基督教关于末世圆满的信念完美的救赎了这一危机。
 
@@ -374,7 +324,7 @@ Step4：神用赐你乐观的心理机制和天堂买单。你行了善，你不
 
 完美的同声祷告，应该是没有任何个人的声音可被单独识别的。这一原则直接催生了后世声乐合唱的基本审美观。这也是为什么教堂诗班被视为对信仰良好的训练和实践的一个根本原因。——至今，这个星球上最好的集体人声表现的桂冠，仍然在基督教会的头上牢牢的戴着。在可以预见的将来，也不可能旁落。这不是声乐技巧或者专业训练就足以达成的高度。或者换一个角度说——若无信仰，仅凭着对荣耀和利益的追求，是承受不了必要的指导和训练的。你是在歌唱，你是在技术性的注意不要破坏协调；他们是在诉说，把破坏协调视作背叛的罪恶忏悔。你们做的本不是一件事，观众也知道不是同一件事。观众对你表现的欣赏，是对歌唱技巧的欣赏，对诗班和谐的感应，却是对信仰直出肺腑的告白的触动。你有美，他们则不止于美，且有真善合一。
 
-听一听，你就明白为何公祷是为神悦纳的了——因为赞美诗本质也是公祷的一部分。
+听一听，你就明白为何公祷是为神悦纳的了——因为赞美诗本质也是公祷的一部分。[男孩唱诗班预告片​www.yugaopian.cn](https://link.zhihu.com/?target=https%3A//www.yugaopian.cn/movie/16317)
 
 不妨找来完整版看看。
 
@@ -388,17 +338,17 @@ Step4：神用赐你乐观的心理机制和天堂买单。你行了善，你不
 
 上帝的语言，其实就是世界。打个形象的类比，这就好像一个导演要对你说明点什么，他就拍了一整部电影给你。这电影里，有存在、有留白；有喧闹，有寂静；有喜怒哀乐，也有不可言的微妙；有人、也有无人。你看完了，很难简单的一言以蔽之，去说这到底是在说什么。
 
-上帝的语言，就是这“电影”的加强版——围绕你身边、由你所见、或你并未见而影响了你的一切事件的总和，就是上帝对你所说的语言。
+[上帝的语言](https://www.zhihu.com/search?q=%E4%B8%8A%E5%B8%9D%E7%9A%84%E8%AF%AD%E8%A8%80&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A534542233%7D)，就是这“电影”的加强版——围绕你身边、由你所见、或你并未见而影响了你的一切事件的总和，就是上帝对你所说的语言。
 
 神的语言的形式与本质，就是“事实”。
 
-神所聆听的祷告，自然而然，也并不是人的言语，而是神的言语。
+**神所聆听的祷告，自然而然，也并不是人的言语，而是神的言语。**
 
-你的默默心语也罢，大声的祈求也罢，都不是作为人的语言而被神听见，而是作为人的行为而被神听见。
+你的默默心语也罢，大声的祈求也罢，**都不是作为人的语言而被神听见，而是作为人的行为而被神听见。**
 
 你看到这逻辑路线所指的方向了吗？
 
-行为即是祈祷，而且是真正上达天听的祈祷。
+**行为即是祈祷，而且是真正上达天听的祈祷。**
 
 辛勤耕作，即“祈求丰收的祈祷”。而不是年头宰牛杀羊的念念有词才叫祈祷。
 
@@ -410,7 +360,7 @@ Step4：神用赐你乐观的心理机制和天堂买单。你行了善，你不
 
 这也从另一面告诉了你世界的真相——人努力的本质，只是一种真诚的祈祷。愿望的实现，不是由这行动所“必然成就”的，而是上帝听见行动的乞求之后依祂的意思成全的。无论你的行为有多么的用力，后来的成就也并不能归功于这行为。
 
-行为的本质是真诚的祷告，但仍是祷告而已。
+**行为的本质是真诚的祷告，但仍是祷告而已。**
 
 
 #未完待续TBC 
