--- a/Anonymity/11 - 新冠/老人.md
+++ b/Anonymity/11 - 新冠/老人.md
@@ -1,17 +1,17 @@
-# 精英集团
-*抛开伦理，放弃老人的防疫措施到底有什么损害?*
+# 老人
+[抛开伦理，放弃老人的防疫措施到底有什么损害？](https://www.zhihu.com/question/391353485/answer/1189859567)
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
 Links: [[老有所依1]] [[老有所依2]] [[终末见证]] [[人心不古]] [[爹味]]
 Tags:   
 
- 
+
 别开玩笑了，这个世界的主宰是五十岁以上的精英集团——无论是从掌握的财富规模、政治资源甚至学术话语权来看都是如此。
 
 任何一个国家都是，大概只除了朝鲜可能有点小特别——但你排除掉正恩小朋友，在整个朝鲜实际掌握运作的仍然是一群五十岁以上的老人。
 
-在社会学意义上，二十岁只是刚睁眼的婴儿，近乎只是一团肉。
+在[社会学](https://www.zhihu.com/search?q=%E7%A4%BE%E4%BC%9A%E5%AD%A6&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A1189859567%7D)意义上，二十岁只是刚睁眼的婴儿，近乎只是一团肉。
 
 三十岁才开始有视觉和听觉。
 
@@ -38,6 +38,3 @@ Tags:
 是在放弃**穷人中最好欺负的一群人**。
 
 赞成或者反对，每个人有自己的权利，但是请按照这个实质版考虑你的立场。
-
-
-
