--- a/摘抄本/待整理_句子摘录.md
+++ b/摘抄本/待整理_句子摘录.md
@@ -1,4 +1,6 @@
+**不要寄希望于为一个弱不经风的幼稚民族准备一个无菌病房了此残生，而要让它老练善疑，成为骗子们不愿花费巨额成本来承担的“投资风险”。**
 
+——[《带节奏》](https://www.zhihu.com/question/528797784/answer/2457932698)
 
 
 ---
