--- a/Nell Nell/待分类/反女权的女性.md
+++ b/Nell Nell/待分类/反女权的女性.md
@@ -3,7 +3,7 @@
 
 > Author: #NellNell 
 Last update: *03/08/2021* 
-Links: [[女权挑战]] [[女性之难]] [[致全体女性]] [[否定女权的父亲]] [[女舰长]] [[女性公平]] [[实质进展]] [[女权与女权主义]] [[要的是啥 - 女人]]
+Links: [[女权挑战]] [[女性之难]] [[致全体女性]] [[否定女权的父亲]] [[Anonymity/07 - 军事技术与艺术/女舰长]] [[女性公平]] [[实质进展]] [[女权与女权主义]] [[要的是啥 - 女人]]
 Tags:  
   
 
