--- a/Anonymity/01 - 家族答集/说谎.md
+++ b/Anonymity/01 - 家族答集/说谎.md
@@ -1,10 +1,10 @@
 # 说谎
-*如何看待说谎这件事？*
+[如何看待说谎这件事？](https://www.zhihu.com/question/21322208/answer/1297176586)
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
 Links:
-Tags:   
+Tags:   #方法实践SOP 
 
 说谎这件事，我想人人都觉得是一个麻烦，甚至是威胁。
 
