--- a/Anonymity/03 - 第一性/真的啊.md
+++ b/Anonymity/03 - 第一性/真的啊.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity 
 Last update: *31/03/2022* 
 Links: [[恋爱原理]] [[缺爱症]] [[脱困]] [[理由]] [[长时间保持理性]] [[对待软弱者]] [[Anonymity/03 - 第一性/爱得痛苦]] [[讨好型人格]] [[不在乎]] [[情绪]]
-Tags: 
+Tags: #亲密关系 
 
 
 真的啊。
