--- a/Anonymity/04 - 社科答集/匿名.md
+++ b/Anonymity/04 - 社科答集/匿名.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *01/10/2021* 
-Links: [[Anonymity/01 - 家族答集/举报]] [[Nell Nell/其它/举报]] [[Anonymity/01 - 家族答集/批评]] [[Nell Nell/其它/批评]] [[道德]] [[真正的恶]] [[谴责恶行]] [[Anonymity/01 - 家族答集/正义]] [[程序正义]] [[Nell Nell/其它/正义]]
+Links: [[Anonymity/01 - 家族答集/举报]] [[Nell Nell/其它/举报]] [[Anonymity/01 - 家族答集/批评]] [[Nell Nell/其它/批评]] [[道德]] [[真正的恶]] [[谴责恶行]] [[Anonymity/01 - 家族答集/正义]] [[程序正义]] 
 Tags:   
 
 写匿名信没什么不正当的，
