--- a/Anonymity/08 - 文艺答集/公允评价.md
+++ b/Anonymity/08 - 文艺答集/公允评价.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
-Links: [[Anonymity/01 - 家族答集/正义]] [[程序正义]] [[Nell Nell/其它/正义]] [[反弹琵琶]] 
+Links: [[Anonymity/01 - 家族答集/正义]] [[程序正义]]  [[反弹琵琶]] 
 Tags:  
 
 
