--- a/Nell Nell/01 - “怎么办”系列/催生.md
+++ b/Nell Nell/01 - “怎么办”系列/催生.md
@@ -3,7 +3,7 @@
 
 > Author: #NellNell 
 Last update: *25/09/2021* 
-Links: [[丁克]] [[所谓儿女]] [[百年孤独]] [[一生之诺]] [[空巢期]] [[世界史]] [[选择的自由]]
+Links: [[所谓儿女]] [[百年孤独]] [[一生之诺]] [[空巢期]] [[世界史]] [[选择的自由]]
 Tags:     
   
 
