--- a/Anonymity/01 - 家族答集/保持快乐.md
+++ b/Anonymity/01 - 家族答集/保持快乐.md
@@ -5,7 +5,7 @@
 Last update: *25/07/2021* 
 Links: [[学习的快乐]] [[悲观与乐观]] [[真正想做的事]] [[苦熬]] [[苦熬 1]] [[烦躁]]
 Tags: 
-沙海拾金： [[工作狂]]
+沙海拾金： [[工作狂1.png]]
 
 因为你的方法论错了。
 
