--- a/Anonymity/01 - 家族答集/学习的快乐.md
+++ b/Anonymity/01 - 家族答集/学习的快乐.md
@@ -5,7 +5,7 @@
 Last update: *23/07/2021* 
 Links: [[不紧张]] [[职业规划]] [[爱得痛苦]]
 Tags:   
-沙海拾金：[[工作狂]] [[工作狂1.png]] [[工作狂2.png]] [[工作狂3.png]] [[工作狂4.png]]
+沙海拾金： [[工作狂1.png]] [[工作狂2.png]] [[工作狂3.png]] [[工作狂4.png]]
 
       
 学习本身就应该是人生至乐。
