--- a/Anonymity/01 - 家族答集/安慰.md
+++ b/Anonymity/01 - 家族答集/安慰.md
@@ -4,7 +4,7 @@
 
 > Author: #Anonymity 
 Last update: *08/09/2021* 
-Links: [[同情的资格]] [[以弱悯强]] [[误解]] [[Anonymity/03 - 第一性/赞美]] [[批评与赞美]] [[Nell Nell/其它/赞美]]
+Links: [[同情的资格]] [[以弱悯强]] [[误解]] [[Anonymity/03 - 第一性/赞美]] [[批评与赞美]] 
 Tags: #方法实践SOP   
 
 安慰这事有几种经典的做法。
