--- a/Anonymity/01 - 家族答集/摆脱996.md
+++ b/Anonymity/01 - 家族答集/摆脱996.md
@@ -5,7 +5,7 @@
 Last update: *23/07/2021* 
 Links: [[职业规划]] [[时间不够]] [[财富观]] [[指挥加班]] [[学习的快乐]] [[学习]] [[自然法]] [[悲观与乐观]] [[真正想做的事]] [[解决996]]
 Tags:    #方法实践SOP 
-沙海拾金： [[注目事实.PNG]] [[说到不如做到]] [[该谁负责1.PNG]] [[该谁负责2.PNG]] [[该谁负责3.PNG]] [[工作狂]] [[工作狂1.png]] [[工作狂2.png]] [[工作狂3.png]] [[工作狂4.png]] [[人类共性2]] [[学好语文.PNG]] [[人妄言轻1.png]] [[人妄言轻2.png]] [[人妄言轻3]]
+沙海拾金： [[注目事实.PNG]] [[说到不如做到]] [[该谁负责1.PNG]] [[该谁负责2.PNG]] [[该谁负责3.PNG]] [[工作狂1.png]] [[工作狂2.png]] [[工作狂3.png]] [[工作狂4.png]] [[人类共性2]] [[学好语文.PNG]] [[人妄言轻1.png]] [[人妄言轻2.png]] [[人妄言轻3]]
 
 
 提高收入有两个做法。
