--- a/Anonymity/01 - 家族答集/认错.md
+++ b/Anonymity/01 - 家族答集/认错.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *12/07/2021* 
-Links: [[悟性2]] [[道歉]] [[为委屈而道歉]] [[极度聪明]] [[自强]] [[Nell Nell/其它/自信]] [[自欺]] [[自视]] [[有修养]]
+Links: [[悟性2]] [[道歉]] [[为委屈而道歉]] [[极度聪明]] [[自强]] [[自欺]] [[自视]] [[有修养]]
 Tags:  #方法实践SOP 
 
 这个答案特别简单——**认错。**
