--- a/Anonymity/03 - 第一性/按需分配.md
+++ b/Anonymity/03 - 第一性/按需分配.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
-Links: [[社会化抚养]] [[无道德社会]] [[老有所依1]] [[老有所依2]] [[终末见证]] [[丁克]] [[生育理由]]
+Links: [[社会化抚养]] [[无道德社会]] [[老有所依1]] [[老有所依2]] [[终末见证]] [[生育理由]]
 Tags:     
 
 数学上来说，实现终身基本生活保障（基本衣食住疗）的绝对必要条件只有一条——享受者自愿放弃生育。
