--- a/Anonymity/04 - 社科答集/帝国病.md
+++ b/Anonymity/04 - 社科答集/帝国病.md
@@ -1,5 +1,5 @@
 # 帝国病
-*帝国主义的定义什么?*
+[帝国主义的定义什么？](https://www.zhihu.com/question/19593017/answer/1399461143)
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
