--- a/Anonymity/04 - 社科答集/接受但不允许.md
+++ b/Anonymity/04 - 社科答集/接受但不允许.md
@@ -1,5 +1,5 @@
 # 接受但不允许
-*如何看待李雪琴说「要允许北大毕业的一些人没那么大的本事」？*
+[如何看待李雪琴说「要允许北大毕业的一些人没那么大的本事」？](https://www.zhihu.com/question/457408234/answer/1866041585)
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
