--- a/Anonymity/04 - 社科答集/明亡实存.md
+++ b/Anonymity/04 - 社科答集/明亡实存.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *28/08/2021* 
-Links: [[反弹琵琶]] [[殖民地]] [[不宜久留]] [[帝国病]] [[帝国陷阱]] [[帝国的烂疮]] [[Anonymity/13 - 百年未有之变局/大国博弈]] [[宣而不战]] [[塔利班 - 客观]] [[塔利班 - 判罪]] [[恐怖主义]] 
+Links: [[反弹琵琶]] [[殖民地]] [[不宜久留]] [[帝国病]] [[帝国陷阱]] [[帝国的烂疮]] [[Anonymity/13 - 百年未有之变局/大国博弈]] [[宣而不战]] [[塔利班 - 客观]]  [[恐怖主义]] 
 Tags:   
 
 
