--- a/Nell Nell/待分类/允许遗憾.md
+++ b/Nell Nell/待分类/允许遗憾.md
@@ -3,7 +3,7 @@
 
 > Author: #NellNell 
 Last update: *08/09/2021* 
-Links: [[Nell Nell/待分类/后悔]] [[活着的意义]] [[今生之意]] [[坚持]] [[可信]] [[励志]] [[理想的能力]] [[理想]] [[工作的意义]] [[选择的自由]] [[前途]] [[Nell Nell/其它/英雄]] [[Nell Nell/“是什么”系列/英雄]] [[不破灭]] [[Anonymity/03 - 第一性/值得一嫁]] [[恋爱原理]] [[感情测试]] [[接受但不允许]] [[爱得勉强]] [[真正想做的事]] [[自视]] [[接受现实]] [[莫失莫忘]]
+Links: [[Nell Nell/待分类/后悔]] [[活着的意义]] [[今生之意]] [[坚持]] [[可信]] [[励志]] [[理想的能力]] [[理想]] [[工作的意义]] [[选择的自由]] [[前途]] [[不破灭]] [[Anonymity/03 - 第一性/值得一嫁]] [[恋爱原理]] [[感情测试]] [[接受但不允许]] [[爱得勉强]] [[真正想做的事]] [[自视]] [[接受现实]] [[莫失莫忘]]
 Tags: 
 
 你要允许人生有遗憾。
