--- a/Anonymity/04 - 社科答集/中国的规模.md
+++ b/Anonymity/04 - 社科答集/中国的规模.md
@@ -2,10 +2,9 @@
 [为何台湾人，甚至有些大陆人都觉得中美会为台湾一战？](https://www.zhihu.com/question/60695005/answer/1728537752)
 
 > Author: #Anonymity
-Last update: *23/07/2021* 
+Last update: *15/05/2021* 
 Links:[[王天下]] 
 Tags:   
-
 
 
 普通人对中国四十年来卧薪尝胆的结果、对中国现在的工业规模、经济体量普遍没有确切概念。
@@ -14,16 +13,13 @@ Tags:
 
   
 
-
 对这种幻想，下面给你们一种统一的、简单的、直观的回答法——带ta们从视觉上直接体会一下。
-
-*!**(https://pic1.zhimg.com/v2-3868dd6be00016bfc7980fb19c0e5d28.jpg)https://www.zhihu.com/video/1346135359131262976*(https://link.zhihu.com/?target=https%3A//www.zhihu.com/video/1346135359131262976)  
-
 
   
 
+  
 
-我们以战斧导弹为一个为一个基本的武力单位来看看。
+我们以[战斧导弹](https://www.zhihu.com/search?q=%E6%88%98%E6%96%A7%E5%AF%BC%E5%BC%B9&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A1728537752%7D)为一个为一个基本的武力单位来看看。
 
 一枚战斧式巡航导弹的杀伤直径我们算它一百米。算宽松点，我们算它一枚可以摧毁一座东方明珠电视台（实际上一般认为它只够摧毁一栋普通住宅楼）。我们算它10000平方米，合0.01平方公里。
 
@@ -39,7 +35,9 @@ Tags:
 
 总毁伤面积，100平方公里。
 
-!**(https://pic2.zhimg.com/50/v2-dd3406de7dc113e4f16f3d5671c0a230_hd.jpg?source=1940ef5c)把美国的库存弹药打光，在极其极其乐观的前提下，可以伤害中国1/600。
+![](https://pic1.zhimg.com/50/v2-fb25decf8239971895c3817048fa8d72_720w.jpg?source=1940ef5c)
+
+把美国的库存弹药打光，在极其极其乐观的前提下，可以伤害中国1/600。
 
 你能不能用一根针刺死犀牛？
 
@@ -69,13 +67,19 @@ Tags:
 
 世界上已经没有任何国家有依赖常规战争手段威胁中国的能力了。
 
+---
+
 有人可能指望什么所谓打供电网、供水网、打互联网节点。
 
-!**(https://pic4.zhimg.com/50/v2-422bc0c736ad3ce7ba54039ce1d5b1e6_hd.jpg?source=1940ef5c)问一问Siri，18.69亿除以6000等于多少？
+![](https://pic1.zhimg.com/50/v2-5e270d996de9b25358da0a5ada290237_720w.jpg?source=1940ef5c)
+
+问一问Siri，18.69亿除以6000等于多少？
 
 311500。折合**31万套**发电机组。
 
 打吧，看打掉哪一万台可以瘫痪掉中国。
+
+---
 
 又有人指出“打击电网可以导致电网失衡”。
 
@@ -87,14 +91,17 @@ Tags:
 
 有几个国家在电网建设、输电技术、供电管理上比中国有更深的战略需求、投资力度、实践经验和研究条件？
 
-供电系统在灾害、战争等等突发威胁下的的鲁棒性在中国电网建设里是不是一个可能被忽视的问题？
+供电系统在灾害、战争等等突发威胁下的的[鲁棒性](https://www.zhihu.com/search?q=%E9%B2%81%E6%A3%92%E6%80%A7&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A1728537752%7D)在中国电网建设里是不是一个可能被忽视的问题？
 
 中国是不是没有决心、没有能力、没有资源解决这个问题？
 
 自己翻翻看，这是最新一期的电气自动化的目录，往期的也可以翻翻。
 
-*欢迎访问《电力系统自动化》网站！*(https://link.zhihu.com/?target=http%3A//aeps.alljournals.ac.cn/aeps/home)  
+[欢迎访问《电力系统自动化》网站！​aeps.alljournals.ac.cn/aeps/home![](https://pic4.zhimg.com/v2-03d2b485e192f81e916fea4e5235508b_180x120.jpg)](https://link.zhihu.com/?target=http%3A//aeps.alljournals.ac.cn/aeps/home)
 
+  
+
+---
 
 又有人担心“切断贸易”。
 
@@ -108,7 +115,6 @@ Tags:
 
 作为已经可以访问火星的国家，中国的导弹射程实际上是无限的。这只是个火力密度问题。
 
-以中国的生产能力，陆基导弹的储量和产能足可以应付任何常规战争的需要。
+以中国的生产能力，[陆基导弹](https://www.zhihu.com/search?q=%E9%99%86%E5%9F%BA%E5%AF%BC%E5%BC%B9&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A1728537752%7D)的储量和产能足可以应付任何常规战争的需要。
 
-!**(https://pic2.zhimg.com/50/v2-5a2f090339a6a72ab9cfdd9d0960c71a_hd.jpg?source=1940ef5c)
-
+![](https://pic1.zhimg.com/50/v2-61f5367733b6eafc95658fd13569e029_720w.jpg?source=1940ef5c)
