--- a/Anonymity/01 - 家族答集/精英.md
+++ b/Anonymity/01 - 家族答集/精英.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
-Links: [[人品差]] [[世界史]] [[人才外流]] [[能力]] [[学好语文]] [[老人]] [[老人]] 
+Links: [[人品差]] [[世界史]] [[留住人才]] [[能力]] [[学好语文]] [[老人]] [[老人]] 
 Tags:   #方法实践SOP  
 
 
