--- a/Anonymity/11 - 新冠/完美传染病.md
+++ b/Anonymity/11 - 新冠/完美传染病.md
@@ -1,5 +1,5 @@
-# 科技抗疫
-*面对新型冠状病毒肺炎疫情，科技公司能够做些什么?*
+# 完美传染病
+[面对新型冠状病毒肺炎疫情，科技公司能够做些什么?](https://www.zhihu.com/question/367572490/answer/984163676)
 
 > Author: #Anonymity
 Last update: *23/07/2021* 
