--- a/Nell Nell/待分类/辟谣.md
+++ b/Nell Nell/待分类/辟谣.md
@@ -3,7 +3,7 @@
 
 > Author: #NellNell 
 Last update: *21/08/2021* 
-Links: [[中药]] [[香油防疫]] [[科技抗疫]]
+Links: [[中药]] [[香油防疫]] [[完美传染病]]
 Tags:  
 
 谢邀。
