--- a/Nell Nell/01 - “怎么办”系列/《海边的曼彻斯特》.md
+++ b/Nell Nell/01 - “怎么办”系列/《海边的曼彻斯特》.md
@@ -1,4 +1,4 @@
-# 后悔
+# 《海边的曼彻斯特》
 [如何评价电影《海边的曼彻斯特》（Manchester by the Sea）?](https://www.zhihu.com/question/53523367/answer/751676961)
 
 > Author: #NellNell 
